// Package merkle æä¾›Merkleæ ‘è®¡ç®—å’ŒéªŒè¯åŠŸèƒ½
//
// ğŸ¯ **æ ‡å‡†Merkleæ ‘å®ç°**
//
// Merkleæ ‘æ˜¯ä¸€ç§å“ˆå¸Œæ ‘ï¼Œç”¨äºé«˜æ•ˆéªŒè¯æ•°æ®é›†çš„å®Œæ•´æ€§ã€‚
// ç‰¹ç‚¹ï¼š
// - å¶å­èŠ‚ç‚¹ï¼šäº¤æ˜“å“ˆå¸Œ
// - éå¶å­èŠ‚ç‚¹ï¼šå­èŠ‚ç‚¹å“ˆå¸Œçš„å“ˆå¸Œ
// - æ ¹èŠ‚ç‚¹ï¼šMerkleæ ¹
package merkle

import (
	"fmt"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"google.golang.org/protobuf/proto"
)

// Hasher å®šä¹‰ç®€åŒ–çš„å“ˆå¸Œæ¥å£
//
// è¿™æ˜¯ä¸€ä¸ªé€‚é…å™¨æ¥å£ï¼Œç”¨äºç»Ÿä¸€ä¸åŒçš„å“ˆå¸Œå®ç°ã€‚
// å®ƒæä¾›äº†ä¸€ä¸ªç®€å•çš„ Hash æ–¹æ³•ï¼Œè¿”å›32å­—èŠ‚çš„å“ˆå¸Œå€¼ã€‚
type Hasher interface {
	// Hash è®¡ç®—æ•°æ®çš„å“ˆå¸Œå€¼
	//
	// å‚æ•°ï¼š
	//   - data: è¾“å…¥æ•°æ®
	//
	// è¿”å›ï¼š
	//   - []byte: å“ˆå¸Œå€¼ï¼ˆé€šå¸¸æ˜¯32å­—èŠ‚ï¼‰
	//   - error: è®¡ç®—é”™è¯¯
	Hash(data []byte) ([]byte, error)
}

// CalculateMerkleRoot è®¡ç®—äº¤æ˜“åˆ—è¡¨çš„Merkleæ ¹
//
// ğŸ¯ **æ ‡å‡†Merkleæ ‘å®ç°**
//
// ç®—æ³•ï¼š
// 1. è®¡ç®—æ‰€æœ‰äº¤æ˜“çš„å“ˆå¸Œä½œä¸ºå¶å­èŠ‚ç‚¹
// 2. ä¸¤ä¸¤é…å¯¹ï¼Œè®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œ
// 3. é‡å¤æ­¥éª¤2ï¼Œç›´åˆ°åªå‰©ä¸€ä¸ªæ ¹èŠ‚ç‚¹
// 4. å¦‚æœèŠ‚ç‚¹æ•°ä¸ºå¥‡æ•°ï¼Œå¤åˆ¶æœ€åä¸€ä¸ªèŠ‚ç‚¹
//
// å‚æ•°ï¼š
//   - hasher: å“ˆå¸ŒæœåŠ¡
//   - transactions: äº¤æ˜“åˆ—è¡¨
//
// è¿”å›ï¼š
//   - []byte: 32å­—èŠ‚Merkleæ ¹
//   - error: è®¡ç®—é”™è¯¯
func CalculateMerkleRoot(hasher Hasher, transactions []*transaction.Transaction) ([]byte, error) {
	if hasher == nil {
		return nil, fmt.Errorf("hasher ä¸èƒ½ä¸ºç©º")
	}
	if len(transactions) == 0 {
		return nil, fmt.Errorf("äº¤æ˜“åˆ—è¡¨ä¸èƒ½ä¸ºç©º")
	}

	// 1. è®¡ç®—æ‰€æœ‰äº¤æ˜“çš„å“ˆå¸Œï¼ˆå¶å­èŠ‚ç‚¹ï¼‰
	hashes := make([][]byte, len(transactions))
	for i, tx := range transactions {
		// ç›´æ¥ä½¿ç”¨Hasheræ¥å£è®¡ç®—äº¤æ˜“å“ˆå¸Œ
		txHash, err := calculateTransactionHash(hasher, tx)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—äº¤æ˜“%då“ˆå¸Œå¤±è´¥: %w", i, err)
		}
		hashes[i] = txHash
	}

	// 2. æ„å»ºMerkleæ ‘
	return buildMerkleTree(hasher, hashes)
}

// calculateTransactionHash è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼ˆå†…éƒ¨è¾…åŠ©å‡½æ•°ï¼‰
// ç›´æ¥ä½¿ç”¨Hasheræ¥å£ï¼Œä¸ä¾èµ–å¤–éƒ¨å·¥å…·å‡½æ•°
func calculateTransactionHash(hasher Hasher, tx *transaction.Transaction) ([]byte, error) {
	if tx == nil {
		return nil, fmt.Errorf("äº¤æ˜“ä¸èƒ½ä¸ºç©º")
	}

	// åºåˆ—åŒ–äº¤æ˜“
	data, err := proto.Marshal(tx)
	if err != nil {
		return nil, fmt.Errorf("åºåˆ—åŒ–äº¤æ˜“å¤±è´¥: %w", err)
	}

	// è®¡ç®—å“ˆå¸Œ
	hash, err := hasher.Hash(data)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	if len(hash) != 32 {
		return nil, fmt.Errorf("å“ˆå¸Œé•¿åº¦é”™è¯¯: æœŸæœ›32å­—èŠ‚, å¾—åˆ°%då­—èŠ‚", len(hash))
	}

	return hash, nil
}

// buildMerkleTree é€’å½’æ„å»ºMerkleæ ‘
func buildMerkleTree(hasher Hasher, hashes [][]byte) ([]byte, error) {
	// åŸºç¡€æƒ…å†µï¼šåªæœ‰ä¸€ä¸ªèŠ‚ç‚¹ï¼Œè¿”å›è¯¥èŠ‚ç‚¹
	if len(hashes) == 1 {
		return hashes[0], nil
	}

	// å¦‚æœèŠ‚ç‚¹æ•°ä¸ºå¥‡æ•°ï¼Œå¤åˆ¶æœ€åä¸€ä¸ªèŠ‚ç‚¹
	if len(hashes)%2 == 1 {
		hashes = append(hashes, hashes[len(hashes)-1])
	}

	// è®¡ç®—ä¸‹ä¸€å±‚èŠ‚ç‚¹
	nextLevel := make([][]byte, 0, len(hashes)/2)
	for i := 0; i < len(hashes); i += 2 {
		// è¿æ¥ä¸¤ä¸ªå­èŠ‚ç‚¹çš„å“ˆå¸Œ
		combined := append(hashes[i], hashes[i+1]...)

		// è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œ
		parentHash, err := hasher.Hash(combined)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œå¤±è´¥: %w", err)
		}

		nextLevel = append(nextLevel, parentHash)
	}

	// é€’å½’å¤„ç†ä¸‹ä¸€å±‚
	return buildMerkleTree(hasher, nextLevel)
}

// VerifyMerkleProof éªŒè¯Merkleè¯æ˜
//
// ğŸ¯ **Merkleè¯æ˜éªŒè¯**
//
// ç”¨äºéªŒè¯æŸä¸ªäº¤æ˜“æ˜¯å¦åœ¨åŒºå—ä¸­ï¼Œè€Œæ— éœ€ä¸‹è½½æ•´ä¸ªåŒºå—ã€‚
//
// å‚æ•°ï¼š
//   - hasher: å“ˆå¸ŒæœåŠ¡
//   - txHash: äº¤æ˜“å“ˆå¸Œ
//   - merkleRoot: Merkleæ ¹
//   - proof: Merkleè¯æ˜è·¯å¾„
//   - index: äº¤æ˜“åœ¨åŒºå—ä¸­çš„ç´¢å¼•
//
// è¿”å›ï¼š
//   - bool: éªŒè¯ç»“æœ
//   - error: éªŒè¯é”™è¯¯
func VerifyMerkleProof(
	hasher Hasher,
	txHash []byte,
	merkleRoot []byte,
	proof [][]byte,
	index int,
) (bool, error) {
	if hasher == nil {
		return false, fmt.Errorf("hasher ä¸èƒ½ä¸ºç©º")
	}
	if len(txHash) != 32 {
		return false, fmt.Errorf("äº¤æ˜“å“ˆå¸Œé•¿åº¦é”™è¯¯")
	}
	if len(merkleRoot) != 32 {
		return false, fmt.Errorf("Merkleæ ¹é•¿åº¦é”™è¯¯")
	}

	// ä»å¶å­èŠ‚ç‚¹å¼€å§‹ï¼Œé€å±‚å‘ä¸Šè®¡ç®—
	currentHash := txHash
	currentIndex := index

	for _, siblingHash := range proof {
		if len(siblingHash) != 32 {
			return false, fmt.Errorf("è¯æ˜å“ˆå¸Œé•¿åº¦é”™è¯¯")
		}

		var combined []byte
		if currentIndex%2 == 0 {
			// å½“å‰èŠ‚ç‚¹åœ¨å·¦è¾¹
			combined = append(currentHash, siblingHash...)
		} else {
			// å½“å‰èŠ‚ç‚¹åœ¨å³è¾¹
			combined = append(siblingHash, currentHash...)
		}

		// è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œ
		parentHash, err := hasher.Hash(combined)
		if err != nil {
			return false, fmt.Errorf("è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œå¤±è´¥: %w", err)
		}

		currentHash = parentHash
		currentIndex = currentIndex / 2
	}

	// æ¯”è¾ƒè®¡ç®—å‡ºçš„æ ¹å“ˆå¸Œä¸ç»™å®šçš„Merkleæ ¹
	if len(currentHash) != len(merkleRoot) {
		return false, nil
	}

	for i := range currentHash {
		if currentHash[i] != merkleRoot[i] {
			return false, nil
		}
	}

	return true, nil
}

