// Package validator å®ç°åŒºå—éªŒè¯æœåŠ¡
//
// ğŸ¯ **BlockValidator æœåŠ¡å®ç°**
//
// æœ¬åŒ…å®ç°äº†åŒºå—éªŒè¯æœåŠ¡ï¼Œè´Ÿè´£éªŒè¯åŒºå—çš„æœ‰æ•ˆæ€§ã€‚
// é‡‡ç”¨å¤šå±‚éªŒè¯ç­–ç•¥ï¼šç»“æ„ â†’ å…±è¯† â†’ äº¤æ˜“ã€‚
//
// ğŸ’¡ **æ ¸å¿ƒèŒè´£**ï¼š
// - éªŒè¯åŒºå—ç»“æ„
// - éªŒè¯å…±è¯†è§„åˆ™
// - éªŒè¯äº¤æ˜“æœ‰æ•ˆæ€§
// - æä¾›éªŒè¯æ€§èƒ½æŒ‡æ ‡
package validator

import (
	"context"
	"fmt"
	"sync"
	"time"

	"github.com/weisyn/v1/internal/core/block/interfaces"
	"github.com/weisyn/v1/internal/core/block/merkle"
	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	eventiface "github.com/weisyn/v1/pkg/interfaces/infrastructure/event"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"github.com/weisyn/v1/pkg/interfaces/tx"
	pkgtypes "github.com/weisyn/v1/pkg/types"
	corruptutil "github.com/weisyn/v1/pkg/utils/corruption"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// Service åŒºå—éªŒè¯æœåŠ¡
//
// ğŸ¯ **è®¾è®¡ç†å¿µ**ï¼š
// - å¤šå±‚éªŒè¯ï¼šç»“æ„ â†’ å…±è¯† â†’ äº¤æ˜“
// - å¿«é€Ÿå¤±è´¥ï¼šç¬¬ä¸€ä¸ªé”™è¯¯æ—¶ç«‹å³è¿”å›
// - æ— çŠ¶æ€ï¼šä¸ä¿®æ”¹ä»»ä½•çŠ¶æ€ï¼Œåªè¯»éªŒè¯
//
// ğŸ“¦ **æœåŠ¡èŒè´£**ï¼š
// - ValidateBlock: éªŒè¯åŒºå—æœ‰æ•ˆæ€§
// - ValidateStructure: éªŒè¯åŒºå—ç»“æ„ï¼ˆå†…éƒ¨æ–¹æ³•ï¼‰
// - ValidateConsensus: éªŒè¯å…±è¯†è§„åˆ™ï¼ˆå†…éƒ¨æ–¹æ³•ï¼‰
// - GetValidatorMetrics: è·å–éªŒè¯æ€§èƒ½æŒ‡æ ‡
type Service struct {
	// ==================== ä¾èµ–æ³¨å…¥ ====================

	// queryService æŸ¥è¯¢æœåŠ¡ï¼ˆè¯»å–é“¾çŠ¶æ€ï¼‰
	queryService persistence.QueryService

	// hasher å“ˆå¸ŒæœåŠ¡ï¼ˆç”¨äºMerkleæ ‘è®¡ç®—å’Œå…¶ä»–å“ˆå¸Œæ“ä½œï¼‰
	hasher crypto.HashManager

	// blockHashClient åŒºå—å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆç”¨äºè®¡ç®—åŒºå—å“ˆå¸Œï¼‰
	blockHashClient core.BlockHashServiceClient

	// txHashClient äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆç”¨äºè®¡ç®—äº¤æ˜“å“ˆå¸Œï¼‰
	txHashClient transaction.TransactionHashServiceClient

	// txVerifier äº¤æ˜“éªŒè¯å™¨ï¼ˆç”¨äºéªŒè¯äº¤æ˜“æœ‰æ•ˆæ€§ï¼ŒP3-7ï¼‰
	txVerifier tx.TxVerifier

	// configProvider é…ç½®æä¾›è€…ï¼ˆå¿…éœ€ï¼Œç”¨äº v2 å…±è¯†å¼ºæ ¡éªŒï¼šéš¾åº¦/æ—¶é—´æˆ³ï¼‰
	configProvider config.Provider

	// logger æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
	logger log.Logger

	// eventBus äº‹ä»¶æ€»çº¿ï¼ˆå¯é€‰ï¼Œç”¨äºå‘å¸ƒ corruption.detected äº‹ä»¶ï¼‰
	eventBus eventiface.EventBus

	// ==================== æŒ‡æ ‡æ”¶é›† ====================

	// metrics éªŒè¯æœåŠ¡æŒ‡æ ‡
	metrics *interfaces.ValidatorMetrics

	// metricsMu æŒ‡æ ‡è¯»å†™é”
	metricsMu sync.Mutex

	// ==================== çŠ¶æ€ç®¡ç† ====================

	// isHealthy å¥åº·çŠ¶æ€
	isHealthy bool

	// lastError æœ€åé”™è¯¯
	lastError error
}

// NewService åˆ›å»ºåŒºå—éªŒè¯æœåŠ¡
//
// ğŸ”§ **åˆå§‹åŒ–æµç¨‹**ï¼š
// 1. éªŒè¯å¿…éœ€ä¾èµ–
// 2. åˆå§‹åŒ–æŒ‡æ ‡
// 3. è®¾ç½®é»˜è®¤é…ç½®
//
// å‚æ•°ï¼š
//   - queryService: æŸ¥è¯¢æœåŠ¡ï¼ˆå¿…éœ€ï¼‰
//   - hasher: å“ˆå¸ŒæœåŠ¡ï¼ˆå¿…éœ€ï¼Œç”¨äºMerkleæ ‘è®¡ç®—ï¼‰
//   - blockHashClient: åŒºå—å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆå¿…éœ€ï¼‰
//   - txHashClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯ï¼ˆå¿…éœ€ï¼‰
//   - txVerifier: äº¤æ˜“éªŒè¯å™¨ï¼ˆå¯é€‰ï¼Œç”¨äºéªŒè¯äº¤æ˜“æœ‰æ•ˆæ€§ï¼‰
//   - logger: æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
//
// è¿”å›ï¼š
//   - interfaces.InternalBlockValidator: åŒºå—éªŒè¯æœåŠ¡å®ä¾‹
//   - error: åˆ›å»ºé”™è¯¯
func NewService(
	queryService persistence.QueryService,
	hasher crypto.HashManager,
	blockHashClient core.BlockHashServiceClient,
	txHashClient transaction.TransactionHashServiceClient,
	txVerifier tx.TxVerifier,
	configProvider config.Provider,
	eventBus eventiface.EventBus,
	logger log.Logger,
) (interfaces.InternalBlockValidator, error) {
	// éªŒè¯å¿…éœ€ä¾èµ–
	if queryService == nil {
		return nil, fmt.Errorf("queryService ä¸èƒ½ä¸ºç©º")
	}
	if hasher == nil {
		return nil, fmt.Errorf("hasher ä¸èƒ½ä¸ºç©º")
	}
	if blockHashClient == nil {
		return nil, fmt.Errorf("blockHashClient ä¸èƒ½ä¸ºç©º")
	}
	if txHashClient == nil {
		return nil, fmt.Errorf("txHashClient ä¸èƒ½ä¸ºç©º")
	}
	if configProvider == nil {
		return nil, fmt.Errorf("configProvider ä¸èƒ½ä¸ºç©º")
	}

	// åˆ›å»ºæœåŠ¡å®ä¾‹
	s := &Service{
		queryService:   queryService,
		hasher:         hasher,
		blockHashClient: blockHashClient,
		txHashClient:   txHashClient,
		txVerifier:     txVerifier,
		configProvider: configProvider,
		eventBus:       eventBus,
		logger:         logger,
		metrics:        &interfaces.ValidatorMetrics{},
		isHealthy:      true,
	}

	if logger != nil {
		logger.Info("âœ… BlockValidator æœåŠ¡åˆå§‹åŒ–æˆåŠŸ")
	}

	return s, nil
}

func (s *Service) publishCorruptionDetected(phase pkgtypes.CorruptionPhase, severity pkgtypes.CorruptionSeverity, height *uint64, hashHex string, key string, err error) {
	if s.eventBus == nil || err == nil {
		return
	}
	data := pkgtypes.CorruptionEventData{
		Component: pkgtypes.CorruptionComponentValidator,
		Phase:     phase,
		Severity:  severity,
		Height:    height,
		Hash:      hashHex,
		Key:       key,
		ErrClass:  corruptutil.ClassifyErr(err),
		Error:     err.Error(),
		At:        pkgtypes.RFC3339Time(time.Now()),
	}
	s.eventBus.Publish(eventiface.EventTypeCorruptionDetected, context.Background(), data)
}

// ValidateBlock éªŒè¯åŒºå—æœ‰æ•ˆæ€§
//
// ğŸ¯ **å¤šå±‚éªŒè¯æµç¨‹**ï¼š
// 1. åŸºç¡€éªŒè¯ï¼ˆnilæ£€æŸ¥ã€ç©ºåŒºå—æ£€æŸ¥ï¼‰
// 2. ç»“æ„éªŒè¯ï¼ˆValidateStructureï¼‰
// 3. å…±è¯†éªŒè¯ï¼ˆValidateConsensusï¼‰
// 4. äº¤æ˜“éªŒè¯
// 5. é“¾è¿æ¥æ€§éªŒè¯
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - block: å¾…éªŒè¯åŒºå—
//
// è¿”å›ï¼š
//   - bool: éªŒè¯ç»“æœï¼ˆtrue=æœ‰æ•ˆï¼Œfalse=æ— æ•ˆï¼‰
//   - error: éªŒè¯é”™è¯¯ï¼ˆnilè¡¨ç¤ºæœ‰æ•ˆï¼‰
func (s *Service) ValidateBlock(ctx context.Context, block *core.Block) (bool, error) {
	startTime := time.Now()
	defer func() {
		s.recordValidation(time.Since(startTime))
	}()

	if block != nil && block.Header != nil && s.logger != nil {
		s.logger.Debugf("å¼€å§‹éªŒè¯åŒºå—ï¼Œé«˜åº¦: %d",
			block.Header.Height)
	}

	// 1. åŸºç¡€éªŒè¯
	if block == nil || block.Header == nil || block.Body == nil {
		return false, s.recordValidationError("structure", fmt.Errorf("åŒºå—æˆ–åŒºå—å¤´/åŒºå—ä½“ä¸ºç©º"))
	}

	// 2. ç»“æ„éªŒè¯
	if err := s.ValidateStructure(ctx, block); err != nil {
		return false, s.recordValidationError("structure", err)
	}

	// 3. å…±è¯†éªŒè¯
	if err := s.ValidateConsensus(ctx, block); err != nil {
		return false, s.recordValidationError("consensus", err)
	}

	// 4. äº¤æ˜“éªŒè¯ï¼ˆP3-7ï¼šå®Œæ•´çš„äº¤æ˜“éªŒè¯é€»è¾‘ï¼‰
	if err := s.validateTransactions(ctx, block); err != nil {
		return false, s.recordValidationError("transaction", err)
	}

	// 5. é“¾è¿æ¥æ€§éªŒè¯ï¼ˆP3-8ï¼šéªŒè¯çˆ¶åŒºå—å­˜åœ¨æ€§å’Œé«˜åº¦è¿ç»­æ€§ï¼‰
	if err := s.validateChainConnectivity(ctx, block); err != nil {
		return false, s.recordValidationError("chain", err)
	}

	// éªŒè¯é€šè¿‡
	s.recordValidationSuccess()

	if s.logger != nil {
		s.logger.Infof("âœ… åŒºå—éªŒè¯é€šè¿‡ï¼Œé«˜åº¦: %d",
			block.Header.Height)
	}

	return true, nil
}

// ValidateStructure éªŒè¯åŒºå—ç»“æ„ï¼ˆå†…éƒ¨æ–¹æ³•ï¼‰
//
// ğŸ¯ **ç»“æ„éªŒè¯**ï¼š
// - åŒºå—å¤´æ ¼å¼
// - åŒºå—ä½“æ ¼å¼
// - å­—æ®µå®Œæ•´æ€§
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - block: å¾…éªŒè¯åŒºå—
//
// è¿”å›ï¼š
//   - error: éªŒè¯é”™è¯¯ï¼ˆnilè¡¨ç¤ºé€šè¿‡ï¼‰
func (s *Service) ValidateStructure(ctx context.Context, block *core.Block) error {
	// è¯¦ç»†å®ç°åœ¨ structure.go
	return s.validateStructure(ctx, block)
}

// ValidateConsensus éªŒè¯å…±è¯†è§„åˆ™ï¼ˆå†…éƒ¨æ–¹æ³•ï¼‰
//
// ğŸ¯ **å…±è¯†éªŒè¯**ï¼š
// - POWéªŒè¯
// - éš¾åº¦éªŒè¯
// - æ—¶é—´æˆ³éªŒè¯
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - block: å¾…éªŒè¯åŒºå—
//
// è¿”å›ï¼š
//   - error: éªŒè¯é”™è¯¯ï¼ˆnilè¡¨ç¤ºé€šè¿‡ï¼‰
func (s *Service) ValidateConsensus(ctx context.Context, block *core.Block) error {
	// è¯¦ç»†å®ç°åœ¨ consensus.go
	return s.validateConsensus(ctx, block)
}

// ==================== å†…éƒ¨ç®¡ç†æ–¹æ³• ====================

// GetValidatorMetrics è·å–éªŒè¯æœåŠ¡æŒ‡æ ‡
func (s *Service) GetValidatorMetrics(ctx context.Context) (*interfaces.ValidatorMetrics, error) {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	// æ›´æ–°å¥åº·çŠ¶æ€
	s.metrics.IsHealthy = s.isHealthy
	if s.lastError != nil {
		s.metrics.ErrorMessage = s.lastError.Error()
	}

	return s.metrics, nil
}

// ==================== è¾…åŠ©æ–¹æ³• ====================

// recordValidation è®°å½•éªŒè¯æŒ‡æ ‡
func (s *Service) recordValidation(duration time.Duration) {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	s.metrics.BlocksValidated++
	s.metrics.LastValidateTime = time.Now().Unix()

	// æ›´æ–°å¹³å‡éªŒè¯è€—æ—¶ï¼ˆæ»‘åŠ¨å¹³å‡ï¼‰
	alpha := 0.1
	newTime := duration.Seconds()
	if s.metrics.AvgValidateTime == 0 {
		s.metrics.AvgValidateTime = newTime
	} else {
		s.metrics.AvgValidateTime = alpha*newTime + (1-alpha)*s.metrics.AvgValidateTime
	}

	// æ›´æ–°æœ€å¤§éªŒè¯è€—æ—¶
	if newTime > s.metrics.MaxValidateTime {
		s.metrics.MaxValidateTime = newTime
	}
}

// recordValidationSuccess è®°å½•éªŒè¯æˆåŠŸ
func (s *Service) recordValidationSuccess() {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	s.metrics.ValidationsPassed++
	s.isHealthy = true
}

// recordValidationError è®°å½•éªŒè¯é”™è¯¯
func (s *Service) recordValidationError(errorType string, err error) error {
	s.metricsMu.Lock()
	defer s.metricsMu.Unlock()

	s.metrics.ValidationsFailed++
	s.lastError = err

	switch errorType {
	case "structure":
		s.metrics.StructureErrors++
	case "consensus":
		s.metrics.ConsensusErrors++
	case "transaction":
		s.metrics.TransactionErrors++
	case "chain":
		s.metrics.ChainErrors++
	}

	return err
}

// validateChainConnectivity éªŒè¯é“¾è¿æ¥æ€§ï¼ˆP3-8ï¼šçˆ¶åŒºå—éªŒè¯ï¼‰
//
// ğŸ¯ **é“¾è¿æ¥æ€§éªŒè¯**ï¼š
// 1. éªŒè¯çˆ¶åŒºå—å­˜åœ¨æ€§ï¼ˆé€šè¿‡ PreviousHash æŸ¥è¯¢ï¼‰
// 2. éªŒè¯é«˜åº¦è¿ç»­æ€§ï¼ˆçˆ¶åŒºå—é«˜åº¦ = å½“å‰é«˜åº¦ - 1ï¼‰
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - block: å¾…éªŒè¯åŒºå—
//
// è¿”å›ï¼š
//   - error: éªŒè¯é”™è¯¯ï¼ˆnilè¡¨ç¤ºé€šè¿‡ï¼‰
func (s *Service) validateChainConnectivity(ctx context.Context, block *core.Block) error {
	// åˆ›ä¸–åŒºå—è·³è¿‡çˆ¶åŒºå—éªŒè¯
	if block.Header.Height == 0 {
		if s.logger != nil {
			s.logger.Debug("åˆ›ä¸–åŒºå—ï¼Œè·³è¿‡çˆ¶åŒºå—éªŒè¯")
		}
		return nil
	}

	// 1. éªŒè¯çˆ¶åŒºå—å“ˆå¸Œéç©º
	if len(block.Header.PreviousHash) == 0 {
		return fmt.Errorf("çˆ¶åŒºå—å“ˆå¸Œä¸ºç©ºï¼ˆé«˜åº¦=%dï¼‰", block.Header.Height)
	}

	// 2. è·å–çˆ¶åŒºå—
	parentBlock, err := s.queryService.GetBlockByHash(ctx, block.Header.PreviousHash)
	if err != nil {
		// ç”Ÿäº§è‡ªè¿è¡Œï¼šç»™å‡ºâ€œéªŒè¯é˜¶æ®µâ€çš„è…åŒ–ä¸Šä¸‹æ–‡ï¼ˆçˆ¶å—ç¼ºå¤±/ç´¢å¼•æŸå/è¯»å–å¤±è´¥ç­‰ï¼‰
		parentHeight := block.Header.Height - 1
		hashHex := fmt.Sprintf("%x", block.Header.PreviousHash)
		s.publishCorruptionDetected(pkgtypes.CorruptionPhaseValidate, pkgtypes.CorruptionSeverityCritical, &parentHeight, hashHex, "", err)

		hashPrefix := block.Header.PreviousHash
		if len(hashPrefix) > 8 {
			hashPrefix = hashPrefix[:8]
		}
		return fmt.Errorf("çˆ¶åŒºå—ä¸å­˜åœ¨ï¼ˆé«˜åº¦=%dï¼Œçˆ¶å“ˆå¸Œ=%xï¼‰: %w",
			block.Header.Height, hashPrefix, err)
	}

	if parentBlock == nil || parentBlock.Header == nil {
		return fmt.Errorf("çˆ¶åŒºå—æ•°æ®æ— æ•ˆï¼ˆé«˜åº¦=%dï¼‰", block.Header.Height)
	}

	// 3. éªŒè¯é«˜åº¦è¿ç»­æ€§
	expectedParentHeight := block.Header.Height - 1
	if parentBlock.Header.Height != expectedParentHeight {
		return fmt.Errorf("é«˜åº¦ä¸è¿ç»­: å½“å‰é«˜åº¦=%dï¼Œçˆ¶åŒºå—é«˜åº¦=%dï¼ŒæœŸæœ›=%d",
			block.Header.Height, parentBlock.Header.Height, expectedParentHeight)
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… é“¾è¿æ¥æ€§éªŒè¯é€šè¿‡: é«˜åº¦=%dï¼Œçˆ¶é«˜åº¦=%d", block.Header.Height, parentBlock.Header.Height)
	}

	return nil
}

// validateTransactions éªŒè¯åŒºå—ä¸­çš„äº¤æ˜“ï¼ˆP3-7ï¼šå®Œæ•´çš„äº¤æ˜“éªŒè¯é€»è¾‘ï¼‰
//
// ğŸ¯ **äº¤æ˜“éªŒè¯æ£€æŸ¥é¡¹**ï¼š
// 1. äº¤æ˜“åˆ—è¡¨éç©ºæ£€æŸ¥
// 2. Coinbase äº¤æ˜“ä½ç½®æ£€æŸ¥ï¼ˆå¿…é¡»åœ¨é¦–ä½ï¼‰
// 3. äº¤æ˜“å“ˆå¸Œé‡å¤æ£€æŸ¥ï¼ˆç¡®ä¿åŒºå—ä¸­æ— é‡å¤äº¤æ˜“ï¼‰
// 4. æ¯ç¬”äº¤æ˜“çš„æœ‰æ•ˆæ€§éªŒè¯ï¼ˆä½¿ç”¨ TxVerifierï¼ŒCoinbase äº¤æ˜“è·³è¿‡ï¼‰
// 5. Merkle æ ¹éªŒè¯ï¼ˆç¡®ä¿äº¤æ˜“åˆ—è¡¨çš„ Merkle æ ¹ä¸åŒºå—å¤´ä¸­çš„ä¸€è‡´ï¼‰
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - block: å¾…éªŒè¯åŒºå—
//
// è¿”å›ï¼š
//   - error: éªŒè¯é”™è¯¯ï¼ˆnilè¡¨ç¤ºé€šè¿‡ï¼‰
func (s *Service) validateTransactions(ctx context.Context, block *core.Block) error {
	transactions := block.Body.Transactions

	// 1. äº¤æ˜“åˆ—è¡¨éç©ºæ£€æŸ¥
	if len(transactions) == 0 {
		return fmt.Errorf("åŒºå—äº¤æ˜“åˆ—è¡¨ä¸ºç©º")
	}

	// 2. Coinbase äº¤æ˜“ä½ç½®æ£€æŸ¥ï¼ˆå¿…é¡»åœ¨é¦–ä½ï¼‰
	if len(transactions[0].Inputs) != 0 {
		return fmt.Errorf("é¦–ä¸ªäº¤æ˜“åº”è¯¥æ˜¯Coinbaseäº¤æ˜“ï¼ˆæ²¡æœ‰è¾“å…¥ï¼‰")
	}

	// 3. äº¤æ˜“å“ˆå¸Œé‡å¤æ£€æŸ¥ï¼ˆç¡®ä¿åŒºå—ä¸­æ— é‡å¤äº¤æ˜“ï¼‰
	txHashes := make(map[string]int)
	for i, tx := range transactions {
		// ä½¿ç”¨ gRPC æœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
		req := &transaction.ComputeHashRequest{
			Transaction: tx,
		}
		resp, err := s.txHashClient.ComputeHash(ctx, req)
		if err != nil {
			return fmt.Errorf("è®¡ç®—äº¤æ˜“%då“ˆå¸Œå¤±è´¥: %w", i, err)
		}

		if !resp.IsValid {
			return fmt.Errorf("äº¤æ˜“%dç»“æ„æ— æ•ˆ", i)
		}

		txHash := resp.Hash
		// æ£€æŸ¥é‡å¤
		txHashStr := string(txHash)
		if dupIndex, exists := txHashes[txHashStr]; exists {
			return fmt.Errorf("äº¤æ˜“é‡å¤: äº¤æ˜“%dä¸äº¤æ˜“%då…·æœ‰ç›¸åŒçš„å“ˆå¸Œ %x", i, dupIndex, txHash[:min(8, len(txHash))])
		}
		txHashes[txHashStr] = i
	}

	// 4. æ¯ç¬”äº¤æ˜“çš„æœ‰æ•ˆæ€§éªŒè¯ï¼ˆä½¿ç”¨ TxVerifierï¼ŒCoinbase äº¤æ˜“è·³è¿‡ï¼‰
	if s.txVerifier != nil {
		for i, tx := range transactions {
			// Coinbase äº¤æ˜“è·³è¿‡éªŒè¯ï¼ˆCoinbase äº¤æ˜“æ²¡æœ‰è¾“å…¥ï¼Œä¸éœ€è¦éªŒè¯ UTXOï¼‰
			if i == 0 && len(tx.Inputs) == 0 {
				if s.logger != nil {
					s.logger.Debug("Coinbase äº¤æ˜“è·³è¿‡éªŒè¯")
				}
				continue
			}

			// éªŒè¯äº¤æ˜“
			if err := s.txVerifier.Verify(ctx, tx); err != nil {
				txHashPrefix := ""
				// ä½¿ç”¨ gRPC æœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼ˆç”¨äºé”™è¯¯ä¿¡æ¯ï¼‰
				req := &transaction.ComputeHashRequest{
					Transaction: tx,
				}
				if resp, hashErr := s.txHashClient.ComputeHash(ctx, req); hashErr == nil && resp.IsValid {
					if len(resp.Hash) >= 8 {
						txHashPrefix = fmt.Sprintf("ï¼ˆå“ˆå¸Œ=%x", resp.Hash[:8])
					}
				}
				return fmt.Errorf("äº¤æ˜“%déªŒè¯å¤±è´¥%sï¼‰: %w", i, txHashPrefix, err)
			}
		}

		if s.logger != nil {
			s.logger.Debugf("âœ… äº¤æ˜“éªŒè¯é€šè¿‡: å…±%dç¬”äº¤æ˜“", len(transactions))
		}
	} else {
		if s.logger != nil {
			s.logger.Debug("âš ï¸ TxVerifier æœªæ³¨å…¥ï¼Œè·³è¿‡äº¤æ˜“æœ‰æ•ˆæ€§éªŒè¯")
		}
	}

	// 5. Merkle æ ¹éªŒè¯ï¼ˆä½¿ç”¨ç»Ÿä¸€çš„äº¤æ˜“å“ˆå¸ŒæœåŠ¡ï¼Œä¸ BlockBuilder/PoWHandler ä¿æŒä¸€è‡´ï¼‰
	calculatedMerkleRoot, err := s.calculateMerkleRootFromTransactions(ctx, transactions)
	if err != nil {
		return fmt.Errorf("è®¡ç®—Merkleæ ¹å¤±è´¥: %w", err)
	}

	// æ¯”è¾ƒè®¡ç®—å‡ºçš„ Merkle æ ¹ä¸åŒºå—å¤´ä¸­çš„ Merkle æ ¹
	if len(calculatedMerkleRoot) != len(block.Header.MerkleRoot) {
		return fmt.Errorf("Merkleæ ¹é•¿åº¦ä¸ä¸€è‡´: è®¡ç®—=%dï¼ŒåŒºå—å¤´=%d",
			len(calculatedMerkleRoot), len(block.Header.MerkleRoot))
	}

	for i := range calculatedMerkleRoot {
		if calculatedMerkleRoot[i] != block.Header.MerkleRoot[i] {
			return fmt.Errorf("Merkleæ ¹ä¸åŒ¹é…: è®¡ç®—=%xï¼ŒåŒºå—å¤´=%x",
				calculatedMerkleRoot[:min(8, len(calculatedMerkleRoot))],
				block.Header.MerkleRoot[:min(8, len(block.Header.MerkleRoot))])
		}
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… Merkleæ ¹éªŒè¯é€šè¿‡: %x", calculatedMerkleRoot[:min(8, len(calculatedMerkleRoot))])
	}

	return nil
}

// calculateMerkleRootFromTransactions ä»äº¤æ˜“åˆ—è¡¨è®¡ç®— Merkle æ ¹
// ğŸ”§ ä½¿ç”¨ç»Ÿä¸€çš„äº¤æ˜“å“ˆå¸ŒæœåŠ¡ï¼Œä¸ BlockBuilder/PoWHandler ä¿æŒä¸€è‡´
// âš ï¸ ä½¿ç”¨è°ƒç”¨æ–¹ä¼ å…¥çš„ ctxï¼Œä»¥ä¾¿åœ¨é«˜è´Ÿè½½æˆ–å¤§åŒºå—åœºæ™¯ä¸‹èƒ½å“åº”è¶…æ—¶/å–æ¶ˆã€‚
func (s *Service) calculateMerkleRootFromTransactions(ctx context.Context, transactions []*transaction.Transaction) ([]byte, error) {
	if len(transactions) == 0 {
		// ç©ºäº¤æ˜“åˆ—è¡¨è¿”å›å…¨é›¶Merkleæ ¹
		return make([]byte, 32), nil
	}

	// ä½¿ç”¨ç»Ÿä¸€çš„äº¤æ˜“å“ˆå¸ŒæœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
	transactionHashes := make([][]byte, len(transactions))
	for i, tx := range transactions {
		req := &transaction.ComputeHashRequest{
			Transaction:      tx,
			IncludeDebugInfo: false,
		}

		resp, err := s.txHashClient.ComputeHash(ctx, req)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—äº¤æ˜“[%d]å“ˆå¸Œå¤±è´¥: %w", i, err)
		}

		if resp == nil || !resp.IsValid || len(resp.Hash) == 0 {
			return nil, fmt.Errorf("äº¤æ˜“[%d]å“ˆå¸Œæ— æ•ˆ", i)
		}

		transactionHashes[i] = resp.Hash
	}

	// ä»äº¤æ˜“å“ˆå¸Œæ„å»º Merkle æ ‘
	return s.buildMerkleTreeFromHashes(transactionHashes)
}

// buildMerkleTreeFromHashes ä»äº¤æ˜“å“ˆå¸Œåˆ—è¡¨æ„å»ºMerkleæ ‘
// ğŸ”§ ä¸ BlockBuilder/PoWHandler ä¿æŒå®Œå…¨ä¸€è‡´çš„ç®—æ³•
func (s *Service) buildMerkleTreeFromHashes(hashes [][]byte) ([]byte, error) {
	// å¦‚æœèŠ‚ç‚¹æ•°ä¸ºå¥‡æ•°ï¼Œå¤åˆ¶æœ€åä¸€ä¸ªèŠ‚ç‚¹
	if len(hashes)%2 == 1 {
		hashes = append(hashes, hashes[len(hashes)-1])
	}

	// åŸºç¡€æƒ…å†µï¼š2ä¸ªèŠ‚ç‚¹é…å¯¹åè¿”å›
	if len(hashes) == 2 {
		combined := append(hashes[0], hashes[1]...)
		hasherAdapter := merkle.NewHashManagerAdapter(s.hasher)
		parentHash, err := hasherAdapter.Hash(combined)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œå¤±è´¥: %w", err)
		}
		return parentHash, nil
	}

	// è®¡ç®—ä¸‹ä¸€å±‚èŠ‚ç‚¹
	nextLevel := make([][]byte, 0, len(hashes)/2)
	hasherAdapter := merkle.NewHashManagerAdapter(s.hasher)
	for i := 0; i < len(hashes); i += 2 {
		// è¿æ¥ä¸¤ä¸ªå­èŠ‚ç‚¹çš„å“ˆå¸Œ
		combined := append(hashes[i], hashes[i+1]...)

		// è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œ
		parentHash, err := hasherAdapter.Hash(combined)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œå¤±è´¥: %w", err)
		}

		nextLevel = append(nextLevel, parentHash)
	}

	// é€’å½’å¤„ç†ä¸‹ä¸€å±‚
	return s.buildMerkleTreeFromHashes(nextLevel)
}

// ç¼–è¯‘æ—¶æ£€æŸ¥æ¥å£å®ç°
var _ interfaces.InternalBlockValidator = (*Service)(nil)
