// Package block æä¾›åŒºå—ç®¡ç†çš„æ ¸å¿ƒå®ç°
//
// ğŸ“‹ **hash_utils.go - åŒºå—å“ˆå¸Œè®¡ç®—è¾…åŠ©å·¥å…·**
//
// æœ¬æ–‡ä»¶æä¾›åŒºå—å“ˆå¸Œè®¡ç®—ç›¸å…³çš„è¾…åŠ©å·¥å…·æ–¹æ³•ï¼Œç¡®ä¿å“ˆå¸Œè®¡ç®—çš„æ ‡å‡†åŒ–å’Œä¸€è‡´æ€§ã€‚
// æ”¯æŒåŒºå—å“ˆå¸Œã€Merkleæ ¹å“ˆå¸Œã€POWéªŒè¯ç­‰å…³é”®å¯†ç å­¦æ“ä½œã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - æ ‡å‡†åŒ–å“ˆå¸Œè®¡ç®—ï¼šç¡®ä¿è·¨å¹³å°ä¸€è‡´çš„å“ˆå¸Œç»“æœ
// - Merkleæ ‘æ„å»ºï¼šæ„å»ºäº¤æ˜“çš„Merkleæ ‘å¹¶è®¡ç®—æ ¹å“ˆå¸Œ
// - POWéš¾åº¦éªŒè¯ï¼šéªŒè¯åŒºå—å“ˆå¸Œæ˜¯å¦æ»¡è¶³éš¾åº¦è¦æ±‚
// - å“ˆå¸Œæ ¼å¼è½¬æ¢ï¼šæ”¯æŒä¸åŒæ ¼å¼çš„å“ˆå¸Œè¡¨ç¤ºå’Œè½¬æ¢
// - æ€§èƒ½ä¼˜åŒ–ï¼šæä¾›é«˜æ•ˆçš„å“ˆå¸Œè®¡ç®—å®ç°
//
// ğŸ—ï¸ **æ¶æ„ç‰¹ç‚¹**ï¼š
// - ç¡®å®šæ€§è®¡ç®—ï¼šç›¸åŒè¾“å…¥ä¿è¯ç›¸åŒè¾“å‡º
// - æ ‡å‡†å…¼å®¹ï¼šç¬¦åˆåŒºå—é“¾æ ‡å‡†å“ˆå¸Œç®—æ³•
// - æ€§èƒ½ä¼˜åŒ–ï¼šä½¿ç”¨é«˜æ•ˆçš„å“ˆå¸Œå®ç°
// - å®‰å…¨ä¿è¯ï¼šé˜²æ­¢å“ˆå¸Œç¢°æ’å’Œæ”»å‡»
//
// è¯¦ç»†è®¾è®¡æ–‡æ¡£ï¼šinternal/core/blockchain/block/README.md
package block

import (
	"context"
	"crypto/sha256"
	"fmt"
	"math/big"

	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== å“ˆå¸Œç®—æ³•å¸¸é‡ ====================

// HashConstants å“ˆå¸Œè®¡ç®—ç›¸å…³å¸¸é‡
const (
	// æ ‡å‡†å“ˆå¸Œé•¿åº¦ï¼ˆå­—èŠ‚ï¼‰
	StandardHashLength = 32

	// SHA-256 ç®—æ³•æ ‡è¯†
	SHA256Algorithm = "SHA256"

	// Merkleæ ‘å¶å­èŠ‚ç‚¹å‰ç¼€ï¼ˆé˜²æ­¢é•¿åº¦æ‰©å±•æ”»å‡»ï¼‰
	MerkleLeafPrefix = 0x00

	// Merkleæ ‘å†…éƒ¨èŠ‚ç‚¹å‰ç¼€
	MerkleInternalPrefix = 0x01

	// åŒºå—å“ˆå¸Œè®¡ç®—å‰ç¼€
	BlockHashPrefix = "WES_BLOCK:"

	// äº¤æ˜“å“ˆå¸Œè®¡ç®—å‰ç¼€
	TransactionHashPrefix = "WES_TX:"
)

// DifficultyConstants POWéš¾åº¦ç›¸å…³å¸¸é‡
var (
	// æœ€å¤§ç›®æ ‡å€¼ï¼ˆæœ€å°éš¾åº¦ï¼‰
	MaxTarget = big.NewInt(0).Lsh(big.NewInt(1), 256-32) // 2^(256-32)

	// æœ€å°ç›®æ ‡å€¼ï¼ˆæœ€å¤§éš¾åº¦ï¼‰
	MinTarget = big.NewInt(1)

	// éš¾åº¦è°ƒæ•´å› å­ï¼ˆé˜²æ­¢éš¾åº¦å˜åŒ–è¿‡å¤§ï¼‰
	MaxDifficultyAdjustmentFactor = 4.0
	MinDifficultyAdjustmentFactor = 0.25
)

// ==================== æ ‡å‡†åŒ–å“ˆå¸Œè®¡ç®— ====================

// computeStandardBlockHash è®¡ç®—æ ‡å‡†åŒºå—å“ˆå¸Œ
//
// ğŸ¯ **æ ‡å‡†åŒ–åŒºå—å“ˆå¸Œè®¡ç®—**
//
// ä½¿ç”¨æ ‡å‡†åŒ–çš„æ–¹æ³•è®¡ç®—åŒºå—å“ˆå¸Œï¼Œç¡®ä¿è·¨å¹³å°ä¸€è‡´æ€§ã€‚
// è°ƒç”¨ gRPC BlockHashService è¿›è¡Œç¡®å®šæ€§å“ˆå¸Œè®¡ç®—ã€‚
//
// ğŸ”„ **å“ˆå¸Œè®¡ç®—æµç¨‹**ï¼š
//
// 1. **é¢„å¤„ç†éªŒè¯**ï¼š
//   - éªŒè¯åŒºå—ç»“æ„çš„å®Œæ•´æ€§
//   - æ£€æŸ¥å¿…éœ€å­—æ®µçš„å­˜åœ¨æ€§
//   - ç¡®ä¿åŒºå—æ ¼å¼ç¬¦åˆåè®®è¦æ±‚
//
// 2. **gRPCæœåŠ¡è°ƒç”¨**ï¼š
//   - æ„é€  ComputeBlockHashRequest
//   - è°ƒç”¨ BlockHashServiceClient.ComputeBlockHash
//   - è·å–æ ‡å‡†åŒ–çš„å“ˆå¸Œç»“æœ
//
// 3. **ç»“æœéªŒè¯**ï¼š
//   - éªŒè¯å“ˆå¸Œé•¿åº¦çš„æ­£ç¡®æ€§
//   - æ£€æŸ¥å“ˆå¸Œè®¡ç®—çš„æœ‰æ•ˆæ€§æ ‡å¿—
//   - ç¡®ä¿ç»“æœç¬¦åˆé¢„æœŸæ ¼å¼
//
// 4. **è°ƒè¯•ä¿¡æ¯å¤„ç†**ï¼š
//   - è®°å½•å“ˆå¸Œè®¡ç®—çš„è°ƒè¯•ä¿¡æ¯
//   - æä¾›æ€§èƒ½ç›‘æ§æ•°æ®
//   - æ”¯æŒé—®é¢˜æ’æŸ¥å’Œä¼˜åŒ–
//
// ğŸ¯ **æ ‡å‡†åŒ–ä¿è¯**ï¼š
// - **ç®—æ³•å›ºå®š**ï¼šç»Ÿä¸€ä½¿ç”¨SHA-256ç®—æ³•
// - **åºåˆ—åŒ–æ ‡å‡†**ï¼šä½¿ç”¨Protobufç¡®å®šæ€§åºåˆ—åŒ–
// - **å­—æ®µé¡ºåº**ï¼šæŒ‰ç…§åè®®å®šä¹‰çš„æ ‡å‡†é¡ºåº
// - **è·¨å¹³å°ä¸€è‡´**ï¼šä¸åŒç³»ç»Ÿè®¡ç®—ç›¸åŒåŒºå—å¾—åˆ°ç›¸åŒå“ˆå¸Œ
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡ï¼Œç”¨äºè¶…æ—¶æ§åˆ¶
//	block: å¾…è®¡ç®—å“ˆå¸Œçš„åŒºå—
//
// è¿”å›å€¼ï¼š
//
//	[]byte: 32å­—èŠ‚çš„æ ‡å‡†åŒ–åŒºå—å“ˆå¸Œ
//	error: è®¡ç®—è¿‡ç¨‹ä¸­çš„é”™è¯¯ï¼Œnil è¡¨ç¤ºè®¡ç®—æˆåŠŸ
func (m *Manager) computeStandardBlockHash(ctx context.Context, block *core.Block) ([]byte, error) {
	if m.logger != nil {
		m.logger.Debugf("è®¡ç®—æ ‡å‡†åŒºå—å“ˆå¸Œï¼Œé«˜åº¦: %d", block.Header.Height)
	}

	// éªŒè¯åŒºå—åŸºç¡€ç»“æ„
	if block == nil {
		return nil, fmt.Errorf("åŒºå—ä¸ºç©ºï¼Œæ— æ³•è®¡ç®—å“ˆå¸Œ")
	}
	if block.Header == nil {
		return nil, fmt.Errorf("åŒºå—å¤´ä¸ºç©ºï¼Œæ— æ³•è®¡ç®—å“ˆå¸Œ")
	}
	if block.Body == nil {
		return nil, fmt.Errorf("åŒºå—ä½“ä¸ºç©ºï¼Œæ— æ³•è®¡ç®—å“ˆå¸Œ")
	}

	// æ„é€  ComputeBlockHashRequest
	req := &core.ComputeBlockHashRequest{
		Block:            block,
		IncludeDebugInfo: false, // åœ¨ç”Ÿäº§ç¯å¢ƒä¸­é€šå¸¸ä¸éœ€è¦è°ƒè¯•ä¿¡æ¯
	}

	// è°ƒç”¨ gRPC BlockHashService è®¡ç®—å“ˆå¸Œ
	resp, err := m.blockHashServiceClient.ComputeBlockHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("è°ƒç”¨åŒºå—å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	// éªŒè¯å“åº”ç»“æœ
	if resp == nil {
		return nil, fmt.Errorf("åŒºå—å“ˆå¸ŒæœåŠ¡è¿”å›ç©ºå“åº”")
	}
	if !resp.IsValid {
		return nil, fmt.Errorf("åŒºå—å“ˆå¸Œè®¡ç®—å¤±è´¥ï¼šåŒºå—æ ¼å¼æ— æ•ˆ")
	}
	if len(resp.Hash) != StandardHashLength {
		return nil, fmt.Errorf("åŒºå—å“ˆå¸Œé•¿åº¦ä¸æ­£ç¡®: æœŸæœ› %d å­—èŠ‚, å®é™… %d å­—èŠ‚",
			StandardHashLength, len(resp.Hash))
	}

	if m.logger != nil {
		m.logger.Debugf("æˆåŠŸè®¡ç®—åŒºå—å“ˆå¸Œï¼Œé•¿åº¦: %d", len(resp.Hash))
	}

	return resp.Hash, nil
}

// computeLocalBlockHash è®¡ç®—æœ¬åœ°åŒºå—å“ˆå¸Œ
//
// ğŸ¯ **æœ¬åœ°å“ˆå¸Œè®¡ç®—ï¼ˆå¤‡ç”¨æ–¹æ¡ˆï¼‰**
//
// ä½œä¸ºgRPCæœåŠ¡çš„å¤‡ç”¨æ–¹æ¡ˆï¼Œæä¾›æœ¬åœ°çš„åŒºå—å“ˆå¸Œè®¡ç®—èƒ½åŠ›ã€‚
// å®ç°ä¸gRPCæœåŠ¡ç›¸åŒçš„ç®—æ³•é€»è¾‘ã€‚
//
// è®¡ç®—æ–¹æ³•ï¼š
// - ä½¿ç”¨SHA-256ç®—æ³•
// - åŸºäºåŒºå—å¤´çš„æ ‡å‡†åŒ–åºåˆ—åŒ–
// - éµå¾ªç›¸åŒçš„å­—æ®µåŒ…å«/æ’é™¤è§„åˆ™
//
// å‚æ•°ï¼š
//
//	block: å¾…è®¡ç®—å“ˆå¸Œçš„åŒºå—
//
// è¿”å›å€¼ï¼š
//
//	[]byte: 32å­—èŠ‚åŒºå—å“ˆå¸Œ
//	error: è®¡ç®—è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (m *Manager) computeLocalBlockHash(block *core.Block) ([]byte, error) {
	// TODO: å®ç°æœ¬åœ°åŒºå—å“ˆå¸Œè®¡ç®—é€»è¾‘
	//
	// å®ç°æ­¥éª¤ï¼š
	// 1. åºåˆ—åŒ–åŒºå—å¤´ï¼ˆæ’é™¤å¯å˜å­—æ®µå¦‚nonceï¼‰
	// 2. æ·»åŠ æ ‡å‡†å‰ç¼€
	// 3. ä½¿ç”¨SHA-256è®¡ç®—å“ˆå¸Œ
	// 4. éªŒè¯ç»“æœé•¿åº¦
	// 5. è¿”å›å“ˆå¸Œå€¼

	if m.logger != nil {
		m.logger.Debugf("è®¡ç®—æœ¬åœ°åŒºå—å“ˆå¸Œï¼Œé«˜åº¦: %d", block.Header.Height)
	}

	// ç®€åŒ–çš„å“ˆå¸Œè®¡ç®—ï¼ˆå ä½å®ç°ï¼‰
	data := fmt.Sprintf("%s%d-%d", BlockHashPrefix, block.Header.Height, block.Header.Timestamp)
	hash := sha256.Sum256([]byte(data))

	return hash[:], nil
}

// ==================== Merkleæ ‘è®¡ç®— ====================

// computeMerkleRoot è®¡ç®—äº¤æ˜“Merkleæ ¹
//
// ğŸ¯ **äº¤æ˜“å®Œæ•´æ€§ä¿è¯**
//
// æ„å»ºäº¤æ˜“åˆ—è¡¨çš„Merkleæ ‘å¹¶è®¡ç®—æ ¹å“ˆå¸Œï¼Œç”¨äºéªŒè¯äº¤æ˜“å®Œæ•´æ€§ã€‚
//
// ğŸ”„ **Merkleæ ‘æ„å»ºç®—æ³•**ï¼š
//
//  1. **å¶å­èŠ‚ç‚¹ç”Ÿæˆ**ï¼š
//     - è®¡ç®—æ¯ä¸ªäº¤æ˜“çš„å“ˆå¸Œï¼ˆé€šè¿‡cryptoå±‚æœåŠ¡ï¼‰
//     - æ·»åŠ å¶å­èŠ‚ç‚¹å‰ç¼€å¹¶è®¡ç®—å¶å­å“ˆå¸Œ
//
//  2. **æ ‘ç»“æ„æ„å»º**ï¼š
//     - é€å±‚å‘ä¸Šæ„å»ºï¼Œç›´åˆ°åªå‰©ä¸€ä¸ªæ ¹èŠ‚ç‚¹
//     - å¥‡æ•°èŠ‚ç‚¹æ—¶å¤åˆ¶æœ€åä¸€ä¸ªèŠ‚ç‚¹è¿›è¡Œé…å¯¹
//     - ä½¿ç”¨å†…éƒ¨èŠ‚ç‚¹å‰ç¼€åŒºåˆ†å¶å­å’Œå†…éƒ¨èŠ‚ç‚¹
//
// 3. **ç‰¹æ®Šæƒ…å†µå¤„ç†**ï¼š
//   - **ç©ºäº¤æ˜“åˆ—è¡¨**ï¼šè¿”å›å›ºå®šçš„ç©ºæ ¹å“ˆå¸Œ
//   - **å•ä¸ªäº¤æ˜“**ï¼šè¿”å›è¯¥äº¤æ˜“çš„å¶å­å“ˆå¸Œ
//
// ğŸ›¡ï¸ **å®‰å…¨æ€§ä¿è¯**ï¼š
// - **å‰ç¼€åŒºåˆ†**ï¼šå¶å­èŠ‚ç‚¹å’Œå†…éƒ¨èŠ‚ç‚¹ä½¿ç”¨ä¸åŒå‰ç¼€ï¼Œé˜²æ­¢é•¿åº¦æ‰©å±•æ”»å‡»
// - **æ ‡å‡†åŒ–è®¡ç®—**ï¼šç»Ÿä¸€ä½¿ç”¨cryptoå±‚æœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
// - **ç®—æ³•å›ºå®š**ï¼šç»Ÿä¸€ä½¿ç”¨SHA-256ç®—æ³•
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	transactions: äº¤æ˜“åˆ—è¡¨
//
// è¿”å›å€¼ï¼š
//
//	[]byte: 32å­—èŠ‚Merkleæ ¹å“ˆå¸Œ
//	error: è®¡ç®—è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (m *Manager) computeMerkleRoot(ctx context.Context, transactions []*transaction.Transaction) ([]byte, error) {
	if m.logger != nil {
		m.logger.Debugf("è®¡ç®—Merkleæ ¹ï¼Œäº¤æ˜“æ•°: %d", len(transactions))
	}

	// å¤„ç†ç©ºäº¤æ˜“åˆ—è¡¨
	if len(transactions) == 0 {
		emptyRoot := sha256.Sum256([]byte("EMPTY_MERKLE_ROOT"))
		return emptyRoot[:], nil
	}

	// å¤„ç†å•ä¸ªäº¤æ˜“çš„æƒ…å†µ
	if len(transactions) == 1 {
		txHash, err := m.computeTransactionHash(ctx, transactions[0])
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥: %w", err)
		}

		// ç”Ÿæˆå¶å­èŠ‚ç‚¹å“ˆå¸Œ
		leafData := append([]byte{MerkleLeafPrefix}, txHash...)
		leafHash := sha256.Sum256(leafData)
		return leafHash[:], nil
	}

	// æ­¥éª¤1: è®¡ç®—æ‰€æœ‰äº¤æ˜“çš„å¶å­èŠ‚ç‚¹å“ˆå¸Œ
	leaves := make([][]byte, len(transactions))
	for i, tx := range transactions {
		// è®¡ç®—äº¤æ˜“å“ˆå¸Œ
		txHash, err := m.computeTransactionHash(ctx, tx)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—ç¬¬ %d ä¸ªäº¤æ˜“å“ˆå¸Œå¤±è´¥: %w", i, err)
		}

		// ç”Ÿæˆå¶å­èŠ‚ç‚¹å“ˆå¸Œï¼ˆæ·»åŠ å¶å­èŠ‚ç‚¹å‰ç¼€ï¼‰
		leafData := append([]byte{MerkleLeafPrefix}, txHash...)
		leafHash := sha256.Sum256(leafData)
		leaves[i] = leafHash[:]
	}

	// æ­¥éª¤2: é€å±‚æ„å»ºMerkleæ ‘
	currentLevel := leaves
	for len(currentLevel) > 1 {
		nextLevel := make([][]byte, 0, (len(currentLevel)+1)/2)

		// å¤„ç†æˆå¯¹çš„èŠ‚ç‚¹
		for i := 0; i < len(currentLevel); i += 2 {
			left := currentLevel[i]
			var right []byte

			// å¤„ç†å¥‡æ•°èŠ‚ç‚¹æƒ…å†µï¼šå¤åˆ¶æœ€åä¸€ä¸ªèŠ‚ç‚¹
			if i+1 < len(currentLevel) {
				right = currentLevel[i+1]
			} else {
				right = currentLevel[i] // è‡ªæˆ‘é…å¯¹
			}

			// è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œï¼ˆæ·»åŠ å†…éƒ¨èŠ‚ç‚¹å‰ç¼€ï¼‰
			parentData := append([]byte{MerkleInternalPrefix}, left...)
			parentData = append(parentData, right...)
			parentHash := sha256.Sum256(parentData)

			nextLevel = append(nextLevel, parentHash[:])
		}

		currentLevel = nextLevel
	}

	if m.logger != nil {
		m.logger.Debugf("æˆåŠŸè®¡ç®—Merkleæ ¹ï¼Œå“ˆå¸Œé•¿åº¦: %d", len(currentLevel[0]))
	}

	return currentLevel[0], nil
}

// computeTransactionHash è®¡ç®—äº¤æ˜“å“ˆå¸Œ
//
// ğŸ¯ **äº¤æ˜“æ ‡è¯†è®¡ç®—**
//
// è®¡ç®—å•ä¸ªäº¤æ˜“çš„æ ‡å‡†åŒ–å“ˆå¸Œï¼Œç”¨äºMerkleæ ‘æ„å»ºå’Œäº¤æ˜“ç´¢å¼•ã€‚
// è°ƒç”¨cryptoå±‚çš„TransactionHashServiceæ¥ç¡®ä¿å“ˆå¸Œè®¡ç®—çš„ä¸€è‡´æ€§ã€‚
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	tx: äº¤æ˜“å¯¹è±¡
//
// è¿”å›å€¼ï¼š
//
//	[]byte: 32å­—èŠ‚äº¤æ˜“å“ˆå¸Œ
//	error: è®¡ç®—è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (m *Manager) computeTransactionHash(ctx context.Context, tx *transaction.Transaction) ([]byte, error) {
	if tx == nil {
		return nil, fmt.Errorf("äº¤æ˜“ä¸ºç©ºï¼Œæ— æ³•è®¡ç®—å“ˆå¸Œ")
	}

	if m.logger != nil {
		m.logger.Debugf("è®¡ç®—äº¤æ˜“å“ˆå¸Œ")
	}

	// æ„é€  ComputeHashRequest
	req := &transaction.ComputeHashRequest{
		Transaction:      tx,
		IncludeDebugInfo: false, // ç”Ÿäº§ç¯å¢ƒé€šå¸¸ä¸éœ€è¦è°ƒè¯•ä¿¡æ¯
	}

	// è°ƒç”¨ gRPC TransactionHashService è®¡ç®—å“ˆå¸Œ
	resp, err := m.txHashServiceClient.ComputeHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("è°ƒç”¨äº¤æ˜“å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	// éªŒè¯å“åº”ç»“æœ
	if resp == nil {
		return nil, fmt.Errorf("äº¤æ˜“å“ˆå¸ŒæœåŠ¡è¿”å›ç©ºå“åº”")
	}
	if !resp.IsValid {
		return nil, fmt.Errorf("äº¤æ˜“å“ˆå¸Œè®¡ç®—å¤±è´¥ï¼šäº¤æ˜“æ ¼å¼æ— æ•ˆ")
	}
	if len(resp.Hash) != StandardHashLength {
		return nil, fmt.Errorf("äº¤æ˜“å“ˆå¸Œé•¿åº¦ä¸æ­£ç¡®: æœŸæœ› %d å­—èŠ‚, å®é™… %d å­—èŠ‚",
			StandardHashLength, len(resp.Hash))
	}

	if m.logger != nil {
		m.logger.Debugf("æˆåŠŸè®¡ç®—äº¤æ˜“å“ˆå¸Œï¼Œé•¿åº¦: %d", len(resp.Hash))
	}

	return resp.Hash, nil
}

// buildMerkleTree æ„å»ºå®Œæ•´Merkleæ ‘ç»“æ„
//
// ğŸ¯ **Merkleæ ‘æ•°æ®ç»“æ„**
//
// æ„å»ºå®Œæ•´çš„Merkleæ ‘ç»“æ„ï¼Œæ”¯æŒMerkleè¯æ˜çš„ç”Ÿæˆå’ŒéªŒè¯ã€‚
//
// æ ‘ç»“æ„ï¼š
// - å¶å­èŠ‚ç‚¹ï¼šäº¤æ˜“å“ˆå¸Œ
// - å†…éƒ¨èŠ‚ç‚¹ï¼šå­èŠ‚ç‚¹å“ˆå¸Œçš„ç»„åˆå“ˆå¸Œ
// - æ ¹èŠ‚ç‚¹ï¼šæ•´ä¸ªæ ‘çš„æ ¹å“ˆå¸Œ
//
// å‚æ•°ï¼š
//
//	txHashes: äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
//
// è¿”å›å€¼ï¼š
//
//	interface{}: Merkleæ ‘ç»“æ„ï¼ˆå…·ä½“ç±»å‹å¾…å®šä¹‰ï¼‰
//	error: æ„å»ºè¿‡ç¨‹ä¸­çš„é”™è¯¯
func (m *Manager) buildMerkleTree(txHashes [][]byte) (interface{}, error) {
	// TODO: å®ç°å®Œæ•´Merkleæ ‘æ„å»ºé€»è¾‘
	//
	// æ„å»ºæ­¥éª¤ï¼š
	// 1. åˆ›å»ºæ ‘ç»“æ„æ•°æ®ç»“æ„
	// 2. ä»äº¤æ˜“å“ˆå¸Œåˆ›å»ºå¶å­èŠ‚ç‚¹
	// 3. é€å±‚å‘ä¸Šæ„å»ºå†…éƒ¨èŠ‚ç‚¹
	// 4. è®°å½•æ¯å±‚çš„èŠ‚ç‚¹ä½ç½®
	// 5. è¿”å›å®Œæ•´çš„æ ‘ç»“æ„

	if m.logger != nil {
		m.logger.Debugf("æ„å»ºMerkleæ ‘ï¼Œå“ˆå¸Œæ•°: %d", len(txHashes))
	}

	// å ä½å®ç°
	return nil, nil
}

// ==================== POWéš¾åº¦éªŒè¯ ====================

// verifyProofOfWork éªŒè¯å·¥ä½œé‡è¯æ˜
//
// ğŸ¯ **POWç®—æ³•éªŒè¯**
//
// éªŒè¯åŒºå—çš„å·¥ä½œé‡è¯æ˜æ˜¯å¦æ»¡è¶³ç½‘ç»œéš¾åº¦è¦æ±‚ã€‚
//
// ğŸ”„ **POWéªŒè¯æµç¨‹**ï¼š
//
// 1. **åŒºå—å“ˆå¸Œè®¡ç®—**ï¼š
//
//   - ä½¿ç”¨æ ‡å‡†æ–¹æ³•è®¡ç®—åŒºå—å“ˆå¸Œ
//
//   - åŒ…å«nonceå­—æ®µçš„å®Œæ•´åŒºå—å¤´
//
//   - ç¡®ä¿å“ˆå¸Œè®¡ç®—çš„å‡†ç¡®æ€§
//
//     2. **éš¾åº¦ç›®æ ‡è½¬æ¢**ï¼š
//     ```
//     target = MaxTarget / difficulty
//     // æˆ–è€…ä½¿ç”¨compact bitsæ ¼å¼
//     target = expandCompactBits(header.bits)
//     ```
//
//     3. **å“ˆå¸Œå€¼æ¯”è¾ƒ**ï¼š
//     ```
//     blockHashInt = new(big.Int).SetBytes(blockHash)
//     return blockHashInt.Cmp(target) <= 0
//     ```
//
// 4. **éªŒè¯ç»“æœåˆ¤æ–­**ï¼š
//   - å“ˆå¸Œå€¼ â‰¤ ç›®æ ‡å€¼ï¼šPOWæœ‰æ•ˆ
//   - å“ˆå¸Œå€¼ > ç›®æ ‡å€¼ï¼šPOWæ— æ•ˆ
//
// ğŸ¯ **éš¾åº¦è®¡ç®—å…¬å¼**ï¼š
// ```
// target = MaxTarget / difficulty
// valid = SHA256(blockHeader) â‰¤ target
// ```
//
// å‚æ•°ï¼š
//
//	header: åŒºå—å¤´ï¼ˆåŒ…å«nonceï¼‰
//	difficulty: ç›®æ ‡éš¾åº¦å€¼
//
// è¿”å›å€¼ï¼š
//
//	bool: POWéªŒè¯ç»“æœï¼Œtrueè¡¨ç¤ºæœ‰æ•ˆ
//	error: éªŒè¯è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (m *Manager) verifyProofOfWork(header *core.BlockHeader, difficulty uint64) (bool, error) {
	// TODO: å®ç°POWéªŒè¯é€»è¾‘
	//
	// éªŒè¯æ­¥éª¤ï¼š
	// 1. è®¡ç®—åŒ…å«nonceçš„åŒºå—å“ˆå¸Œ
	// 2. æ ¹æ®éš¾åº¦è®¡ç®—ç›®æ ‡å€¼
	// 3. å°†å“ˆå¸Œè½¬æ¢ä¸ºå¤§æ•´æ•°
	// 4. æ¯”è¾ƒå“ˆå¸Œä¸ç›®æ ‡å€¼
	// 5. è¿”å›éªŒè¯ç»“æœ

	if m.logger != nil {
		m.logger.Debugf("éªŒè¯POWï¼Œéš¾åº¦: %d", difficulty)
	}

	// TODO: å®ç°å…·ä½“éªŒè¯é€»è¾‘
	// 1. åˆ›å»ºåŒ…å«nonceçš„å®Œæ•´åŒºå—ï¼ˆç”¨äºå“ˆå¸Œè®¡ç®—ï¼‰
	// 2. è®¡ç®—åŒºå—å“ˆå¸Œ
	// 3. è®¡ç®—éš¾åº¦ç›®æ ‡
	// 4. æ¯”è¾ƒå“ˆå¸Œä¸ç›®æ ‡

	// å ä½å®ç° - æ€»æ˜¯è¿”å›true
	return true, nil
}

// calculateDifficultyTarget è®¡ç®—éš¾åº¦ç›®æ ‡å€¼
//
// ğŸ¯ **éš¾åº¦ç›®æ ‡è®¡ç®—**
//
// æ ¹æ®éš¾åº¦å€¼è®¡ç®—å¯¹åº”çš„ç›®æ ‡å“ˆå¸Œå€¼ã€‚
//
// è®¡ç®—å…¬å¼ï¼š
// ```
// target = MaxTarget / difficulty
// å…¶ä¸­ MaxTarget = 2^(256-32) = 2^224
// ```
//
// å‚æ•°ï¼š
//
//	difficulty: éš¾åº¦å€¼
//
// è¿”å›å€¼ï¼š
//
//	*big.Int: ç›®æ ‡å€¼
//	error: è®¡ç®—é”™è¯¯
func (m *Manager) calculateDifficultyTarget(difficulty uint64) (*big.Int, error) {
	if difficulty == 0 {
		return nil, fmt.Errorf("éš¾åº¦å€¼ä¸èƒ½ä¸ºé›¶")
	}

	// è®¡ç®—ç›®æ ‡å€¼ï¼šMaxTarget / difficulty
	target := new(big.Int).Div(MaxTarget, big.NewInt(int64(difficulty)))

	// ç¡®ä¿ç›®æ ‡å€¼åœ¨åˆç†èŒƒå›´å†…
	if target.Cmp(MinTarget) < 0 {
		target = new(big.Int).Set(MinTarget)
	}

	if m.logger != nil {
		m.logger.Debugf("è®¡ç®—éš¾åº¦ç›®æ ‡ï¼Œéš¾åº¦: %d, ç›®æ ‡: %x", difficulty, target.Bytes())
	}

	return target, nil
}

// ==================== å“ˆå¸Œæ ¼å¼è½¬æ¢å·¥å…· ====================

// hashToHexString å“ˆå¸Œè½¬åå…­è¿›åˆ¶å­—ç¬¦ä¸²
//
// ğŸ¯ **å“ˆå¸Œæ ¼å¼è½¬æ¢**
//
// å°†å­—èŠ‚æ•°ç»„å“ˆå¸Œè½¬æ¢ä¸ºåå…­è¿›åˆ¶å­—ç¬¦ä¸²è¡¨ç¤ºã€‚
//
// å‚æ•°ï¼š
//
//	hash: å“ˆå¸Œå­—èŠ‚æ•°ç»„
//
// è¿”å›å€¼ï¼š
//
//	string: åå…­è¿›åˆ¶å­—ç¬¦ä¸²
func (m *Manager) hashToHexString(hash []byte) string {
	return fmt.Sprintf("%x", hash)
}

// hexStringToHash åå…­è¿›åˆ¶å­—ç¬¦ä¸²è½¬å“ˆå¸Œ
//
// ğŸ¯ **å“ˆå¸Œæ ¼å¼è§£æ**
//
// å°†åå…­è¿›åˆ¶å­—ç¬¦ä¸²è§£æä¸ºå“ˆå¸Œå­—èŠ‚æ•°ç»„ã€‚
//
// å‚æ•°ï¼š
//
//	hexStr: åå…­è¿›åˆ¶å­—ç¬¦ä¸²
//
// è¿”å›å€¼ï¼š
//
//	[]byte: å“ˆå¸Œå­—èŠ‚æ•°ç»„
//	error: è§£æé”™è¯¯
func (m *Manager) hexStringToHash(hexStr string) ([]byte, error) {
	// TODO: å®ç°åå…­è¿›åˆ¶å­—ç¬¦ä¸²è§£æ
	//
	// è§£ææ­¥éª¤ï¼š
	// 1. éªŒè¯å­—ç¬¦ä¸²æ ¼å¼
	// 2. å»é™¤å¯èƒ½çš„å‰ç¼€ï¼ˆå¦‚0xï¼‰
	// 3. è½¬æ¢ä¸ºå­—èŠ‚æ•°ç»„
	// 4. éªŒè¯é•¿åº¦
	// 5. è¿”å›ç»“æœ

	if len(hexStr) != StandardHashLength*2 {
		return nil, fmt.Errorf("æ— æ•ˆçš„å“ˆå¸Œå­—ç¬¦ä¸²é•¿åº¦: %d", len(hexStr))
	}

	// å ä½å®ç°
	return make([]byte, StandardHashLength), nil
}

// validateHashLength éªŒè¯å“ˆå¸Œé•¿åº¦
//
// ğŸ¯ **å“ˆå¸Œæ ¼å¼éªŒè¯**
//
// éªŒè¯å“ˆå¸Œå­—èŠ‚æ•°ç»„çš„é•¿åº¦æ˜¯å¦ç¬¦åˆæ ‡å‡†ã€‚
//
// å‚æ•°ï¼š
//
//	hash: å“ˆå¸Œå­—èŠ‚æ•°ç»„
//
// è¿”å›å€¼ï¼š
//
//	error: éªŒè¯é”™è¯¯ï¼Œnilè¡¨ç¤ºé•¿åº¦æ­£ç¡®
func (m *Manager) validateHashLength(hash []byte) error {
	if len(hash) != StandardHashLength {
		return fmt.Errorf("å“ˆå¸Œé•¿åº¦ä¸æ­£ç¡®: æœŸæœ› %d å­—èŠ‚, å®é™… %d å­—èŠ‚",
			StandardHashLength, len(hash))
	}
	return nil
}

// ==================== æ€§èƒ½ä¼˜åŒ–å·¥å…· ====================

// batchComputeTransactionHashes æ‰¹é‡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
//
// ğŸ¯ **æ‰¹é‡å“ˆå¸Œè®¡ç®—ä¼˜åŒ–**
//
// æ‰¹é‡è®¡ç®—å¤šä¸ªäº¤æ˜“çš„å“ˆå¸Œï¼Œè°ƒç”¨cryptoå±‚æœåŠ¡ç¡®ä¿ä¸€è‡´æ€§ã€‚
// æ”¯æŒå¤§é‡äº¤æ˜“çš„é«˜æ•ˆå¤„ç†ã€‚
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//	transactions: äº¤æ˜“åˆ—è¡¨
//
// è¿”å›å€¼ï¼š
//
//	[][]byte: äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
//	error: è®¡ç®—é”™è¯¯
func (m *Manager) batchComputeTransactionHashes(ctx context.Context, transactions []*transaction.Transaction) ([][]byte, error) {
	if len(transactions) == 0 {
		return [][]byte{}, nil
	}

	hashes := make([][]byte, len(transactions))

	for i, tx := range transactions {
		hash, err := m.computeTransactionHash(ctx, tx)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—ç¬¬ %d ä¸ªäº¤æ˜“å“ˆå¸Œå¤±è´¥: %w", i, err)
		}
		hashes[i] = hash
	}

	if m.logger != nil {
		m.logger.Debugf("æ‰¹é‡è®¡ç®—äº¤æ˜“å“ˆå¸Œå®Œæˆï¼Œæ•°é‡: %d", len(hashes))
	}

	return hashes, nil
}

// ==================== å“ˆå¸Œç¼“å­˜å·¥å…· ====================

// cacheBlockHash ç¼“å­˜åŒºå—å“ˆå¸Œ
//
// ğŸ¯ **å“ˆå¸Œè®¡ç®—ç¼“å­˜**
//
// ç¼“å­˜è®¡ç®—è¿‡çš„åŒºå—å“ˆå¸Œï¼Œé¿å…é‡å¤è®¡ç®—ã€‚
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡
//	blockHeight: åŒºå—é«˜åº¦
//	hash: è®¡ç®—çš„å“ˆå¸Œ
//
// è¿”å›å€¼ï¼š
//
//	error: ç¼“å­˜é”™è¯¯
func (m *Manager) cacheBlockHash(ctx context.Context, blockHeight uint64, hash []byte) error {
	// TODO: å®ç°åŒºå—å“ˆå¸Œç¼“å­˜é€»è¾‘
	//
	// ç¼“å­˜ç­–ç•¥ï¼š
	// 1. ä½¿ç”¨åŒºå—é«˜åº¦ä½œä¸ºé”®
	// 2. è®¾ç½®é€‚å½“çš„TTL
	// 3. å‹ç¼©å­˜å‚¨ä»¥èŠ‚çœç©ºé—´
	// 4. æ”¯æŒæ‰¹é‡ç¼“å­˜æ¸…ç†

	if m.logger != nil {
		m.logger.Debugf("ç¼“å­˜åŒºå—å“ˆå¸Œï¼Œé«˜åº¦: %d, å“ˆå¸Œ: %x", blockHeight, hash)
	}

	// å ä½å®ç°
	return nil
}

// getCachedBlockHash è·å–ç¼“å­˜çš„åŒºå—å“ˆå¸Œ
//
// ğŸ¯ **å“ˆå¸Œç¼“å­˜æŸ¥è¯¢**
//
// ä»ç¼“å­˜ä¸­è·å–ä¹‹å‰è®¡ç®—çš„åŒºå—å“ˆå¸Œã€‚
//
// å‚æ•°ï¼š
//
//	ctx: ä¸Šä¸‹æ–‡
//	blockHeight: åŒºå—é«˜åº¦
//
// è¿”å›å€¼ï¼š
//
//	[]byte: ç¼“å­˜çš„å“ˆå¸Œï¼Œnilè¡¨ç¤ºæœªæ‰¾åˆ°
//	bool: æ˜¯å¦æ‰¾åˆ°ç¼“å­˜
//	error: æŸ¥è¯¢é”™è¯¯
func (m *Manager) getCachedBlockHash(ctx context.Context, blockHeight uint64) ([]byte, bool, error) {
	// TODO: å®ç°å“ˆå¸Œç¼“å­˜æŸ¥è¯¢é€»è¾‘
	//
	// æŸ¥è¯¢æ­¥éª¤ï¼š
	// 1. æ ¹æ®åŒºå—é«˜åº¦æŸ¥è¯¢ç¼“å­˜
	// 2. éªŒè¯ç¼“å­˜æ•°æ®çš„æœ‰æ•ˆæ€§
	// 3. æ£€æŸ¥ç¼“å­˜æ˜¯å¦è¿‡æœŸ
	// 4. è¿”å›æŸ¥è¯¢ç»“æœ

	if m.logger != nil {
		m.logger.Debugf("æŸ¥è¯¢ç¼“å­˜åŒºå—å“ˆå¸Œï¼Œé«˜åº¦: %d", blockHeight)
	}

	// å ä½å®ç°
	return nil, false, nil
}
