// Package eutxo å®ç°EUTXOæŸ¥è¯¢æœåŠ¡
package eutxo

import (
	"bytes"
	"context"
	"encoding/binary"
	"fmt"
	"sort"

	runtimectx "github.com/weisyn/v1/internal/core/infrastructure/runtime"
	"github.com/weisyn/v1/internal/core/block/merkle"
	"github.com/weisyn/v1/internal/core/persistence/query/interfaces"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/constants"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"google.golang.org/protobuf/proto"
)

// Service EUTXOæŸ¥è¯¢æœåŠ¡
type Service struct {
	storage storage.BadgerStore
	hasher  crypto.HashManager // âœ… çŠ¶æ€æ ¹è®¡ç®—ï¼šæ·»åŠ  HashManager ä¾èµ–
	logger  log.Logger
}

// NewService åˆ›å»ºEUTXOæŸ¥è¯¢æœåŠ¡
func NewService(storage storage.BadgerStore, hasher crypto.HashManager, logger log.Logger) (interfaces.InternalUTXOQuery, error) {
	if storage == nil {
		return nil, fmt.Errorf("storage ä¸èƒ½ä¸ºç©º")
	}
	if hasher == nil {
		return nil, fmt.Errorf("hasher ä¸èƒ½ä¸ºç©ºï¼ˆçŠ¶æ€æ ¹è®¡ç®—éœ€è¦ï¼‰")
	}

	s := &Service{
		storage: storage,
		hasher:  hasher,
		logger:  logger,
	}

	if logger != nil {
		logger.Info("âœ… UTXOQuery æœåŠ¡å·²åˆ›å»º")
	}

	return s, nil
}

// GetUTXO æ ¹æ®OutPointç²¾ç¡®è·å–UTXO
func (s *Service) GetUTXO(ctx context.Context, outpoint *transaction.OutPoint) (*utxo.UTXO, error) {
	// 1. éªŒè¯å‚æ•°
	if outpoint == nil || outpoint.TxId == nil {
		return nil, fmt.Errorf("æ— æ•ˆçš„ OutPoint")
	}

	// 2. æ„é€ å­˜å‚¨é”®ï¼ˆéµå¾ª data-architecture.md è§„èŒƒï¼‰
	// é”®æ ¼å¼ï¼šutxo:set:{txHash}:{outputIndex}
	// ç¬¦åˆ docs/system/designs/storage/data-architecture.md è§„èŒƒ
	utxoKey := fmt.Sprintf("utxo:set:%x:%d", outpoint.TxId, outpoint.OutputIndex)

	// 3. ä»å­˜å‚¨è·å–
	data, err := s.storage.Get(ctx, []byte(utxoKey))
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢ UTXO å¤±è´¥: %w", err)
	}

	// 4. ååºåˆ—åŒ–
	utxoObj := &utxo.UTXO{}
	if err := proto.Unmarshal(data, utxoObj); err != nil {
		return nil, fmt.Errorf("ååºåˆ—åŒ– UTXO å¤±è´¥: %w", err)
	}

	return utxoObj, nil
}

// GetUTXOsByAddress è·å–åœ°å€æ‹¥æœ‰çš„UTXOåˆ—è¡¨ï¼ˆP3-16ï¼šåŸºäºç´¢å¼•çš„åœ°å€UTXOæŸ¥è¯¢ï¼‰
//
// ğŸ¯ **æŸ¥è¯¢ç­–ç•¥**ï¼š
// 1. ä½¿ç”¨åœ°å€ç´¢å¼•é”® `index:address:{address}` æŸ¥è¯¢ç´¢å¼•
// 2. è§£æç´¢å¼•å€¼è·å–æ‰€æœ‰ outpoint
// 3. æ ¹æ®æ¯ä¸ª outpoint æŸ¥è¯¢å¯¹åº”çš„ UTXO
// 4. æ ¹æ® category è¿‡æ»¤ï¼ˆå¦‚æœæŒ‡å®šï¼‰
// 5. æ ¹æ® onlyAvailable è¿‡æ»¤çŠ¶æ€ï¼ˆåªè¿”å› AVAILABLE çŠ¶æ€ï¼‰
func (s *Service) GetUTXOsByAddress(ctx context.Context, address []byte, category *utxo.UTXOCategory, onlyAvailable bool) ([]*utxo.UTXO, error) {
	// 1. éªŒè¯å‚æ•°
	if len(address) == 0 {
		return nil, fmt.Errorf("åœ°å€ä¸èƒ½ä¸ºç©º")
	}

	// 2. æ„å»ºåœ°å€ç´¢å¼•é”®
	// æ ¼å¼ï¼šindex:address:{address}
	addressIndexKey := fmt.Sprintf("index:address:%x", address)

	// 3. ä» Storage è·å–ç´¢å¼•æ•°æ®
	indexData, err := s.storage.Get(ctx, []byte(addressIndexKey))
	if err != nil {
		// ç´¢å¼•ä¸å­˜åœ¨ï¼Œè¿”å›ç©ºåˆ—è¡¨ï¼ˆä¸æ˜¯é”™è¯¯ï¼‰
		if s.logger != nil {
			s.logger.Debugf("åœ°å€ %x çš„ç´¢å¼•ä¸å­˜åœ¨ï¼Œè¿”å›ç©ºåˆ—è¡¨", address)
		}
		return []*utxo.UTXO{}, nil
	}

	if len(indexData) == 0 {
		if s.logger != nil {
			s.logger.Debugf("åœ°å€ %x çš„ç´¢å¼•ä¸ºç©ºï¼Œè¿”å›ç©ºåˆ—è¡¨", address)
		}
		return []*utxo.UTXO{}, nil
	}

	// 4. è§£æç´¢å¼•æ•°æ®ï¼Œè·å–æ‰€æœ‰ outpoint
	outpoints, err := s.decodeOutPointList(indexData)
	if err != nil {
		return nil, fmt.Errorf("è§£æåœ°å€ç´¢å¼•æ•°æ®å¤±è´¥: %w", err)
	}

	if len(outpoints) == 0 {
		if s.logger != nil {
			s.logger.Debugf("åœ°å€ %x çš„ç´¢å¼•ä¸­æ²¡æœ‰ outpointï¼Œè¿”å›ç©ºåˆ—è¡¨", address)
		}
		return []*utxo.UTXO{}, nil
	}

	// 5. æ ¹æ®æ¯ä¸ª outpoint æŸ¥è¯¢å¯¹åº”çš„ UTXOï¼Œå¹¶åº”ç”¨è¿‡æ»¤æ¡ä»¶
	utxos := make([]*utxo.UTXO, 0, len(outpoints))
	for _, outpoint := range outpoints {
		utxoObj, err := s.GetUTXO(ctx, outpoint)
		if err != nil {
			// å¦‚æœæŸä¸ª UTXO æŸ¥è¯¢å¤±è´¥ï¼Œè®°å½•è­¦å‘Šä½†ç»§ç»­å¤„ç†å…¶ä»– UTXO
			if s.logger != nil {
				s.logger.Warnf("æŸ¥è¯¢ UTXO å¤±è´¥ (txHash=%x, index=%d): %v", outpoint.TxId, outpoint.OutputIndex, err)
			}
			continue
		}
		if utxoObj == nil {
			continue
		}

		// 5.1 æ ¹æ® category è¿‡æ»¤ï¼ˆå¦‚æœæŒ‡å®šï¼‰
		if category != nil {
			if utxoObj.GetCategory() != *category {
				continue // ç±»åˆ«ä¸åŒ¹é…ï¼Œè·³è¿‡
			}
		}

		// 5.2 æ ¹æ® onlyAvailable è¿‡æ»¤çŠ¶æ€
		if onlyAvailable {
			// åªè¿”å› AVAILABLE çŠ¶æ€çš„ UTXO
			if utxoObj.GetStatus() != utxo.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE {
				continue // çŠ¶æ€ä¸åŒ¹é…ï¼Œè·³è¿‡
			}
		}

		utxos = append(utxos, utxoObj)
	}

	if s.logger != nil {
		s.logger.Debugf("æŸ¥è¯¢åœ°å€ UTXO: address=%x, category=%v, onlyAvailable=%v, count=%d",
			address, category, onlyAvailable, len(utxos))
	}

	return utxos, nil
}

// decodeOutPointList è§£ç ç´¢å¼•æ•°æ®ä¸­çš„ outpoint åˆ—è¡¨
//
// ğŸ”§ ç´¢å¼•æ•°æ®æ ¼å¼ï¼šå¤šä¸ªå›ºå®š36å­—èŠ‚çš„ outpoint åºåˆ—
// æ¯ä¸ª outpoint: [32å­—èŠ‚TxId][4å­—èŠ‚OutputIndex] = 36å­—èŠ‚
// ï¼ˆä¸ writer/utxo.go çš„ addToAddressIndexInTransaction ä¿æŒä¸€è‡´ï¼‰
//
// å‚æ•°ï¼š
//   - data: ç´¢å¼•æ•°æ®
//
// è¿”å›ï¼š
//   - []*transaction.OutPoint: outpoint åˆ—è¡¨
//   - error: è§£ç é”™è¯¯
func (s *Service) decodeOutPointList(data []byte) ([]*transaction.OutPoint, error) {
	// éªŒè¯æ•°æ®é•¿åº¦å¿…é¡»æ˜¯36çš„å€æ•°
	if len(data)%36 != 0 {
		return nil, fmt.Errorf("ç´¢å¼•æ•°æ®æ ¼å¼é”™è¯¯ï¼šé•¿åº¦(%d)ä¸æ˜¯36çš„å€æ•°", len(data))
	}

	count := len(data) / 36
	if count == 0 {
		return []*transaction.OutPoint{}, nil
	}

	outpoints := make([]*transaction.OutPoint, 0, count)

	for i := 0; i < count; i++ {
		offset := i * 36

		// è¯»å– TxIdï¼ˆ32å­—èŠ‚ï¼‰
		txID := make([]byte, 32)
		copy(txID, data[offset:offset+32])

		// è¯»å– OutputIndexï¼ˆ4å­—èŠ‚ï¼ŒBigEndianï¼‰
		outputIndex := binary.BigEndian.Uint32(data[offset+32 : offset+36])

		// åˆ›å»º OutPoint
		outpoint := &transaction.OutPoint{
			TxId:        txID,
			OutputIndex: outputIndex,
		}

		outpoints = append(outpoints, outpoint)
	}

	return outpoints, nil
}

// GetSponsorPoolUTXOs è·å–èµåŠ©æ± UTXOåˆ—è¡¨ï¼ˆP3-17ï¼šå®Œæ•´å®ç°ï¼‰
//
// ğŸ¯ **æŸ¥è¯¢ç­–ç•¥**ï¼š
// 1. ä½¿ç”¨èµåŠ©æ± åœ°å€å¸¸é‡ `constants.SponsorPoolOwner`ï¼ˆå…¨é›¶åœ°å€ï¼‰
// 2. æŸ¥è¯¢ç±»åˆ«ä¸º ASSET çš„ UTXOï¼ˆèµåŠ©æ± åªåŒ…å«èµ„äº§ç±»å‹ï¼‰
// 3. æ ¹æ® onlyAvailable è¿‡æ»¤çŠ¶æ€
//
// æ³¨æ„ï¼šèµåŠ©æ±  UTXO å…·æœ‰ç‰¹æ®Šçš„ Owner åœ°å€ï¼ˆå…¨é›¶åœ°å€ï¼‰ï¼Œç”¨äºæ ‡è¯†ç³»ç»Ÿä¿ç•™çš„æ¿€åŠ±æ± 
func (s *Service) GetSponsorPoolUTXOs(ctx context.Context, onlyAvailable bool) ([]*utxo.UTXO, error) {
	// 1. ä½¿ç”¨èµåŠ©æ± åœ°å€å¸¸é‡ï¼ˆå…¨é›¶åœ°å€ï¼Œ20å­—èŠ‚ï¼‰
	sponsorPoolAddress := constants.SponsorPoolOwner[:]

	// 2. æŸ¥è¯¢ç±»åˆ«ä¸º ASSET çš„ UTXOï¼ˆèµåŠ©æ± åªåŒ…å«èµ„äº§ç±»å‹çš„ UTXOï¼‰
	category := utxo.UTXOCategory_UTXO_CATEGORY_ASSET

	// 3. å¤ç”¨ GetUTXOsByAddress æ–¹æ³•æŸ¥è¯¢
	utxos, err := s.GetUTXOsByAddress(ctx, sponsorPoolAddress, &category, onlyAvailable)
	if err != nil {
		return nil, fmt.Errorf("æŸ¥è¯¢èµåŠ©æ±  UTXO å¤±è´¥: %w", err)
	}

	if s.logger != nil {
		s.logger.Debugf("æŸ¥è¯¢èµåŠ©æ±  UTXO: onlyAvailable=%v, count=%d", onlyAvailable, len(utxos))
	}

	return utxos, nil
}

// GetCurrentStateRoot è·å–å½“å‰UTXOçŠ¶æ€æ ¹
//
// ğŸ¯ **çŠ¶æ€æ ¹è®¡ç®—**ï¼š
// åŸºäºæ‰€æœ‰ UTXO è®¡ç®— Merkle æ ¹ï¼Œåæ˜ å½“å‰ UTXO é›†åˆçš„çŠ¶æ€ã€‚
//
// ğŸ“‹ **è®¡ç®—æµç¨‹**ï¼š
// 1. æ‰«ææ‰€æœ‰ UTXOï¼ˆé€šè¿‡å‰ç¼€ `utxo:set:`ï¼‰
// 2. è®¡ç®—æ¯ä¸ª UTXO çš„å“ˆå¸Œï¼ˆåºåˆ—åŒ–åå“ˆå¸Œï¼‰
// 3. ä½¿ç”¨ Merkle æ ‘è®¡ç®—æ ¹å“ˆå¸Œ
// 4. è¿”å›32å­—èŠ‚çŠ¶æ€æ ¹
//
// âš ï¸ **æ€§èƒ½è€ƒè™‘**ï¼š
// - æ­¤æ–¹æ³•éœ€è¦æ‰«ææ‰€æœ‰ UTXOï¼Œå¯èƒ½è¾ƒè€—æ—¶
// - å»ºè®®åœ¨ UTXO å˜æ›´åå¼‚æ­¥è®¡ç®—å’Œæ›´æ–°
func (s *Service) GetCurrentStateRoot(ctx context.Context) ([]byte, error) {
	// 1. è·å–æ‰€æœ‰ UTXOï¼ˆé€šè¿‡å‰ç¼€æ‰«æï¼‰
	// ç¬¦åˆ docs/system/designs/storage/data-architecture.md è§„èŒƒ
	utxoPrefix := []byte("utxo:set:")
	utxoMap, err := s.storage.PrefixScan(ctx, utxoPrefix)
	if err != nil {
		return nil, fmt.Errorf("æ‰«æ UTXO å¤±è´¥: %w", err)
	}

	// 2. å¦‚æœæ²¡æœ‰ UTXOï¼Œè¿”å›ç©ºå“ˆå¸Œ
	if len(utxoMap) == 0 {
		if s.logger != nil {
			s.logger.Debug("æ—  UTXOï¼Œè¿”å›ç©ºçŠ¶æ€æ ¹")
		}
		return make([]byte, 32), nil
	}

	// 3. è®¡ç®—æ¯ä¸ª UTXO çš„å“ˆå¸Œ
	// âš ï¸ æ³¨æ„ï¼šPrefixScan è¿”å›çš„æ˜¯ mapï¼Œéå†é¡ºåºä¸ç¡®å®šã€‚
	// ä¸ºäº†ä¿è¯ StateRoot åœ¨ä¸åŒèŠ‚ç‚¹ä¸Šå¯å¤ç°ï¼Œè¿™é‡Œéœ€è¦å¯¹ key åšæ’åºåå†è®¡ç®— Merkle Rootã€‚
	utxoHashes := make([][]byte, 0, len(utxoMap))

	// 3.1 æ”¶é›†å¹¶æ’åºæ‰€æœ‰ keyï¼Œä¿è¯éå†é¡ºåºç¡®å®š
	keys := make([]string, 0, len(utxoMap))
	for k := range utxoMap {
		keys = append(keys, k)
	}
	sort.Strings(keys)

	// 3.2 æŒ‰ç…§æœ‰åº key è®¡ç®—æ¯ä¸ª UTXO çš„å“ˆå¸Œ
	for _, k := range keys {
		utxoData := utxoMap[k]
		// éªŒè¯æ•°æ®å®Œæ•´æ€§ï¼ˆå¯é€‰ï¼‰
		utxoObj := &utxo.UTXO{}
		if err := proto.Unmarshal(utxoData, utxoObj); err != nil {
			if s.logger != nil {
				s.logger.Warnf("ååºåˆ—åŒ– UTXO å¤±è´¥ï¼Œè·³è¿‡: %v", err)
			}
			continue
		}

		// è®¡ç®— UTXO å“ˆå¸Œï¼ˆä½¿ç”¨åºåˆ—åŒ–æ•°æ®ï¼‰
		utxoHash := s.hasher.SHA256(utxoData)
		utxoHashes = append(utxoHashes, utxoHash)
	}

	// 4. ä½¿ç”¨ Merkle æ ‘è®¡ç®—æ ¹å“ˆå¸Œ
	if len(utxoHashes) == 0 {
		return make([]byte, 32), nil
	}

	// ä½¿ç”¨ merkle åŒ…è®¡ç®— Merkle æ ¹
	hasherAdapter := merkle.NewHashManagerAdapter(s.hasher)
	stateRoot, err := buildMerkleTree(hasherAdapter, utxoHashes)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®— Merkle æ ‘å¤±è´¥: %w", err)
	}

	// ç¡®ä¿çŠ¶æ€æ ¹é•¿åº¦ä¸º32å­—èŠ‚
	if len(stateRoot) != 32 {
		return nil, fmt.Errorf("çŠ¶æ€æ ¹é•¿åº¦é”™è¯¯: æœŸæœ›32å­—èŠ‚, å¾—åˆ°%då­—èŠ‚", len(stateRoot))
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… çŠ¶æ€æ ¹è®¡ç®—å®Œæˆ: %x (UTXOæ•°é‡=%d)", stateRoot[:8], len(utxoHashes))
	}

	return stateRoot, nil
}

// CheckAssetUTXOConsistency æ‰§è¡Œä¸€æ¬¡èµ„äº§ UTXO çŠ¶æ€æ ¹ä¸€è‡´æ€§æ£€æŸ¥
//
// è®¾è®¡ç›®æ ‡ï¼š
// - é€šè¿‡æ¯”è¾ƒå½“å‰è®¡ç®—çš„ UTXO çŠ¶æ€æ ¹ä¸æŒä¹…åŒ–å­˜å‚¨çš„çŠ¶æ€æ ¹ï¼Œåˆ¤æ–­èµ„äº§ UTXO æ˜¯å¦å¤„äºå¥åº·çŠ¶æ€
// - å¦‚æœçŠ¶æ€æ ¹ç¼ºå¤±ï¼Œåˆ™å°†èµ„äº§ UTXO æ ‡è®°ä¸º Degradedï¼ˆé™çº§ä½†ä¸åˆ¤å®šä¸ºä¸¥é‡ä¸ä¸€è‡´ï¼‰
// - å¦‚æœçŠ¶æ€æ ¹ä¸ä¸€è‡´ï¼Œåˆ™å°†èµ„äº§ UTXO æ ‡è®°ä¸º Inconsistentï¼Œä¾¿äºä¸Šå±‚è§¦å‘è‡ªåŠ¨ä¿®å¤
func (s *Service) CheckAssetUTXOConsistency(ctx context.Context) (bool, error) {
	// 1. è®¡ç®—å½“å‰ UTXO çŠ¶æ€æ ¹
	currentRoot, err := s.GetCurrentStateRoot(ctx)
	if err != nil {
		if s.logger != nil {
			s.logger.Warnf("AssetUTXO ä¸€è‡´æ€§æ£€æŸ¥: è®¡ç®—å½“å‰çŠ¶æ€æ ¹å¤±è´¥: %v", err)
		}
		return false, fmt.Errorf("è®¡ç®—å½“å‰ UTXO çŠ¶æ€æ ¹å¤±è´¥: %w", err)
	}

	// 2. è¯»å–æŒä¹…åŒ–çŠ¶æ€æ ¹ï¼ˆç”± eutxo.Writer.UpdateStateRoot ç»´æŠ¤ï¼‰
	const stateRootKey = "utxo_state_root"
	storedRoot, err := s.storage.Get(ctx, []byte(stateRootKey))
	if err != nil || len(storedRoot) == 0 {
		// æœªæ‰¾åˆ°çŠ¶æ€æ ¹ï¼šå¤„äºé™çº§çŠ¶æ€ï¼Œä½†ä¸è§†ä¸ºä¸¥é‡ä¸ä¸€è‡´
		runtimectx.SetUTXOHealth(runtimectx.UTXOTypeAsset, runtimectx.UTXOHealthDegraded)
		if s.logger != nil {
			s.logger.Warnf("AssetUTXO ä¸€è‡´æ€§æ£€æŸ¥: æœªæ‰¾åˆ°æŒä¹…åŒ–çŠ¶æ€æ ¹ï¼ˆkey=%sï¼‰ï¼Œæ ‡è®°ä¸º Degraded", stateRootKey)
		}
		return false, nil
	}

	// 3. æ ¡éªŒé•¿åº¦
	if len(storedRoot) != len(currentRoot) {
		runtimectx.SetUTXOHealth(runtimectx.UTXOTypeAsset, runtimectx.UTXOHealthInconsistent)
		if s.logger != nil {
			s.logger.Warnf("AssetUTXO ä¸€è‡´æ€§æ£€æŸ¥: çŠ¶æ€æ ¹é•¿åº¦ä¸ä¸€è‡´ï¼Œstored=%d, current=%d",
				len(storedRoot), len(currentRoot))
		}
		return true, nil
	}

	// 4. æ¯”è¾ƒå†…å®¹
	if !bytes.Equal(storedRoot, currentRoot) {
		runtimectx.SetUTXOHealth(runtimectx.UTXOTypeAsset, runtimectx.UTXOHealthInconsistent)
		if s.logger != nil {
			s.logger.Warnf("AssetUTXO ä¸€è‡´æ€§æ£€æŸ¥: çŠ¶æ€æ ¹ä¸ä¸€è‡´, stored=%x, current=%x",
				storedRoot[:8], currentRoot[:8])
		}
		return true, nil
	}

	// ä¸€è‡´ï¼šæ ‡è®°ä¸ºå¥åº·
	runtimectx.SetUTXOHealth(runtimectx.UTXOTypeAsset, runtimectx.UTXOHealthHealthy)
	if s.logger != nil {
		s.logger.Debugf("AssetUTXO ä¸€è‡´æ€§æ£€æŸ¥é€šè¿‡: çŠ¶æ€æ ¹ä¸€è‡´=%x", currentRoot[:8])
	}

	return false, nil
}

// RunAssetUTXORepair æ‰§è¡Œä¸€æ¬¡èµ„äº§ UTXO è‡ªåŠ¨ä¿®å¤
//
// å½“å‰å®ç°çš„ä¿®å¤ç­–ç•¥ï¼š
// - é‡æ–°è®¡ç®—å½“å‰ UTXO çŠ¶æ€æ ¹ï¼Œå¹¶å°†å…¶å†™å›æŒä¹…åŒ–å­˜å‚¨ï¼ˆutxo_state_rootï¼‰
// - è§†å½“å‰ UTXO é›†åˆä¸ºçœŸå®æ¥æºï¼Œå°†çŠ¶æ€æ ¹è§†ä¸ºâ€œå…ƒæ•°æ®ä¿®å¤â€
// - ä¸å¯¹ UTXO é›†åˆæœ¬èº«åšæ¸…ç©ºå’Œé‡å»ºï¼ˆä»åŒºå—é‡æ”¾çš„å®Œæ•´é‡å»ºç•™å¾…åç»­æ‰©å±•ï¼‰
func (s *Service) RunAssetUTXORepair(ctx context.Context, dryRun bool) error {
	// 1. è®¡ç®—å½“å‰ UTXO çŠ¶æ€æ ¹
	currentRoot, err := s.GetCurrentStateRoot(ctx)
	if err != nil {
		if s.logger != nil {
			s.logger.Warnf("AssetUTXO ä¿®å¤: è®¡ç®—å½“å‰çŠ¶æ€æ ¹å¤±è´¥: %v", err)
		}
		return fmt.Errorf("AssetUTXO ä¿®å¤æ—¶è®¡ç®—çŠ¶æ€æ ¹å¤±è´¥: %w", err)
	}

	if dryRun {
		if s.logger != nil {
			s.logger.Infof("AssetUTXO ä¿®å¤ï¼ˆDRY-RUNï¼‰: è®¡ç®—å¾—åˆ°çŠ¶æ€æ ¹=%xï¼Œå°†åœ¨é dry-run æ¨¡å¼ä¸‹å†™å› utxo_state_root",
				currentRoot[:8])
		}
		return nil
	}

	// 2. å†™å›æŒä¹…åŒ–çŠ¶æ€æ ¹
	const stateRootKey = "utxo_state_root"
	if err := s.storage.Set(ctx, []byte(stateRootKey), currentRoot); err != nil {
		return fmt.Errorf("AssetUTXO ä¿®å¤: å†™å›çŠ¶æ€æ ¹å¤±è´¥: %w", err)
	}

	// 3. æ ‡è®°ä¸ºå¥åº·
	runtimectx.SetUTXOHealth(runtimectx.UTXOTypeAsset, runtimectx.UTXOHealthHealthy)

	if s.logger != nil {
		s.logger.Infof("âœ… AssetUTXO ä¿®å¤å®Œæˆ: çŠ¶æ€æ ¹å·²æ›´æ–°ä¸ºå½“å‰å€¼=%xï¼ˆä»…ä¿®å¤å…ƒæ•°æ®ï¼Œä¸é‡æ”¾åŒºå—ï¼‰", currentRoot[:8])
	}

	return nil
}

// buildMerkleTree é€’å½’æ„å»º Merkle æ ‘
//
// ç”¨äºè®¡ç®— UTXO çŠ¶æ€æ ¹çš„ Merkle æ ‘ï¼ˆä½¿ç”¨å“ˆå¸Œæ•°ç»„è€Œä¸æ˜¯äº¤æ˜“åˆ—è¡¨ï¼‰
func buildMerkleTree(hasher merkle.Hasher, hashes [][]byte) ([]byte, error) {
	// åŸºç¡€æƒ…å†µï¼šåªæœ‰ä¸€ä¸ªèŠ‚ç‚¹ï¼Œè¿”å›è¯¥èŠ‚ç‚¹
	if len(hashes) == 1 {
		return hashes[0], nil
	}

	// å¦‚æœèŠ‚ç‚¹æ•°ä¸ºå¥‡æ•°ï¼Œå¤åˆ¶æœ€åä¸€ä¸ªèŠ‚ç‚¹
	if len(hashes)%2 == 1 {
		hashes = append(hashes, hashes[len(hashes)-1])
	}

	// è®¡ç®—ä¸‹ä¸€å±‚èŠ‚ç‚¹
	nextLevel := make([][]byte, 0, len(hashes)/2)
	for i := 0; i < len(hashes); i += 2 {
		// è¿æ¥ä¸¤ä¸ªå­èŠ‚ç‚¹çš„å“ˆå¸Œ
		combined := append(hashes[i], hashes[i+1]...)

		// è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œ
		parentHash, err := hasher.Hash(combined)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œå¤±è´¥: %w", err)
		}

		nextLevel = append(nextLevel, parentHash)
	}

	// é€’å½’å¤„ç†ä¸‹ä¸€å±‚
	return buildMerkleTree(hasher, nextLevel)
}

// ç¼–è¯‘æ—¶æ£€æŸ¥æ¥å£å®ç°
var _ interfaces.InternalUTXOQuery = (*Service)(nil)
